@@ -1,30 +1,20 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.ingest.common;
 
 import org.elasticsearch.test.ESTestCase;
 
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
-import static java.util.Collections.emptyMap;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.notNullValue;
@@ -35,7 +25,7 @@ public class CsvProcessorFactoryTests extends ESTestCase {
         CsvProcessor.Factory factory = new CsvProcessor.Factory();
         HashMap<String, Object> properties = new HashMap<>();
         properties.put("field", "field");
-        properties.put("target_fields", Collections.singletonList("target"));
+        properties.put("target_fields", List.of("target"));
         properties.put("quote", "|");
         properties.put("separator", "/");
         properties.put("empty_value", "empty");
@@ -44,12 +34,12 @@ public class CsvProcessorFactoryTests extends ESTestCase {
         CsvProcessor csv = factory.create(null, "csv", null, properties);
         assertThat(csv, notNullValue());
         assertThat(csv.field, equalTo("field"));
-        assertThat(csv.headers, equalTo(new String[]{"target"}));
+        assertThat(csv.headers, equalTo(new String[] { "target" }));
         assertThat(csv.quote, equalTo('|'));
         assertThat(csv.separator, equalTo('/'));
         assertThat(csv.emptyValue, equalTo("empty"));
         assertThat(csv.trim, equalTo(true));
         assertThat(csv.ignoreMissing, equalTo(true));
-        assertThat(properties, is(emptyMap()));
+        assertThat(properties, is(Map.of()));
     }
 }
