@@ -1,50 +1,43 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 package org.elasticsearch.persistent;
 
 import org.elasticsearch.ResourceAlreadyExistsException;
 import org.elasticsearch.ResourceNotFoundException;
-import org.elasticsearch.Version;
+import org.elasticsearch.TransportVersion;
+import org.elasticsearch.TransportVersions;
 import org.elasticsearch.cluster.AbstractNamedDiffable;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.NamedDiff;
 import org.elasticsearch.cluster.metadata.Metadata;
-import org.elasticsearch.common.Nullable;
-import org.elasticsearch.common.ParseField;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.io.stream.VersionedNamedWriteable;
 import org.elasticsearch.common.io.stream.Writeable;
-import org.elasticsearch.common.xcontent.ConstructingObjectParser;
-import org.elasticsearch.common.xcontent.ObjectParser;
-import org.elasticsearch.common.xcontent.ObjectParser.NamedObjectParser;
-import org.elasticsearch.common.xcontent.ToXContent;
-import org.elasticsearch.common.xcontent.ToXContentObject;
-import org.elasticsearch.common.xcontent.XContentBuilder;
-import org.elasticsearch.common.xcontent.XContentParser;
+import org.elasticsearch.common.xcontent.ChunkedToXContent;
+import org.elasticsearch.core.Nullable;
+import org.elasticsearch.xcontent.ConstructingObjectParser;
+import org.elasticsearch.xcontent.ObjectParser;
+import org.elasticsearch.xcontent.ObjectParser.NamedObjectParser;
+import org.elasticsearch.xcontent.ParseField;
+import org.elasticsearch.xcontent.ToXContent;
+import org.elasticsearch.xcontent.ToXContentObject;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentParser;
 
 import java.io.IOException;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -54,7 +47,7 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import static org.elasticsearch.cluster.metadata.Metadata.ALL_CONTEXTS;
-import static org.elasticsearch.common.xcontent.ConstructingObjectParser.constructorArg;
+import static org.elasticsearch.xcontent.ConstructingObjectParser.constructorArg;
 
 /**
  * A cluster state record that contains a list of all running persistent tasks
@@ -76,11 +69,15 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
 
     private static final ObjectParser<Builder, Void> PERSISTENT_TASKS_PARSER = new ObjectParser<>(TYPE, Builder::new);
 
-    private static final ObjectParser<TaskBuilder<PersistentTaskParams>, Void> PERSISTENT_TASK_PARSER =
-            new ObjectParser<>("tasks", TaskBuilder::new);
+    private static final ObjectParser<TaskBuilder<PersistentTaskParams>, Void> PERSISTENT_TASK_PARSER = new ObjectParser<>(
+        "tasks",
+        TaskBuilder::new
+    );
 
-    public static final ConstructingObjectParser<Assignment, Void> ASSIGNMENT_PARSER =
-            new ConstructingObjectParser<>("assignment", objects -> new Assignment((String) objects[0], (String) objects[1]));
+    public static final ConstructingObjectParser<Assignment, Void> ASSIGNMENT_PARSER = new ConstructingObjectParser<>(
+        "assignment",
+        objects -> new Assignment((String) objects[0], (String) objects[1])
+    );
 
     private static final NamedObjectParser<TaskDescriptionBuilder<PersistentTaskParams>, Void> TASK_DESCRIPTION_PARSER;
 
@@ -91,10 +88,16 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
 
         // Task description parser initialization
         ObjectParser<TaskDescriptionBuilder<PersistentTaskParams>, String> parser = new ObjectParser<>("named");
-        parser.declareObject(TaskDescriptionBuilder::setParams,
-                (p, c) -> p.namedObject(PersistentTaskParams.class, c, null), new ParseField("params"));
-        parser.declareObject(TaskDescriptionBuilder::setState,
-                (p, c) -> p.namedObject(PersistentTaskState.class, c, null), new ParseField("state", "status"));
+        parser.declareObject(
+            TaskDescriptionBuilder::setParams,
+            (p, c) -> p.namedObject(PersistentTaskParams.class, c, null),
+            new ParseField("params")
+        );
+        parser.declareObject(
+            TaskDescriptionBuilder::setState,
+            (p, c) -> p.namedObject(PersistentTaskState.class, c, null),
+            new ParseField("state", "status")
+        );
         TASK_DESCRIPTION_PARSER = (XContentParser p, Void c, String name) -> parser.parse(p, new TaskDescriptionBuilder<>(name), name);
 
         // Assignment parser
@@ -107,20 +110,24 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
         PERSISTENT_TASK_PARSER.declareLong(TaskBuilder::setAllocationId, new ParseField("allocation_id"));
 
         PERSISTENT_TASK_PARSER.declareNamedObjects(
-                (TaskBuilder<PersistentTaskParams> taskBuilder, List<TaskDescriptionBuilder<PersistentTaskParams>> objects) -> {
-                    if (objects.size() != 1) {
-                        throw new IllegalArgumentException("only one task description per task is allowed");
-                    }
-                    TaskDescriptionBuilder<PersistentTaskParams> builder = objects.get(0);
-                    taskBuilder.setTaskName(builder.taskName);
-                    taskBuilder.setParams(builder.params);
-                    taskBuilder.setState(builder.state);
-                }, TASK_DESCRIPTION_PARSER, new ParseField("task"));
+            (TaskBuilder<PersistentTaskParams> taskBuilder, List<TaskDescriptionBuilder<PersistentTaskParams>> objects) -> {
+                if (objects.size() != 1) {
+                    throw new IllegalArgumentException("only one task description per task is allowed");
+                }
+                TaskDescriptionBuilder<PersistentTaskParams> builder = objects.get(0);
+                taskBuilder.setTaskName(builder.taskName);
+                taskBuilder.setParams(builder.params);
+                taskBuilder.setState(builder.state);
+            },
+            TASK_DESCRIPTION_PARSER,
+            new ParseField("task")
+        );
         PERSISTENT_TASK_PARSER.declareObject(TaskBuilder::setAssignment, ASSIGNMENT_PARSER, new ParseField("assignment"));
-        PERSISTENT_TASK_PARSER.declareLong(TaskBuilder::setAllocationIdOnLastStatusUpdate,
-                new ParseField("allocation_id_on_last_status_update"));
+        PERSISTENT_TASK_PARSER.declareLong(
+            TaskBuilder::setAllocationIdOnLastStatusUpdate,
+            new ParseField("allocation_id_on_last_status_update")
+        );
     }
-
 
     public static PersistentTasksCustomMetadata getPersistentTasksCustomMetadata(ClusterState clusterState) {
         return clusterState.getMetadata().custom(PersistentTasksCustomMetadata.TYPE);
@@ -139,12 +146,12 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
             this.taskName = taskName;
         }
 
-        private TaskDescriptionBuilder setParams(Params params) {
+        private TaskDescriptionBuilder<Params> setParams(Params params) {
             this.params = params;
             return this;
         }
 
-        private TaskDescriptionBuilder setState(PersistentTaskState state) {
+        private TaskDescriptionBuilder<Params> setState(PersistentTaskState state) {
             this.state = state;
             return this;
         }
@@ -163,10 +170,7 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
     }
 
     public Collection<PersistentTask<?>> findTasks(String taskName, Predicate<PersistentTask<?>> predicate) {
-        return this.tasks().stream()
-                .filter(p -> taskName.equals(p.getTaskName()))
-                .filter(predicate)
-                .collect(Collectors.toList());
+        return this.tasks().stream().filter(p -> taskName.equals(p.getTaskName())).filter(predicate).toList();
     }
 
     @Override
@@ -174,8 +178,7 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
         if (this == o) return true;
         if (o == null || getClass() != o.getClass()) return false;
         PersistentTasksCustomMetadata that = (PersistentTasksCustomMetadata) o;
-        return lastAllocationId == that.lastAllocationId &&
-                Objects.equals(tasks, that.tasks);
+        return lastAllocationId == that.lastAllocationId && Objects.equals(tasks, that.tasks);
     }
 
     @Override
@@ -189,13 +192,15 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
     }
 
     public long getNumberOfTasksOnNode(String nodeId, String taskName) {
-        return tasks.values().stream().filter(
-                task -> taskName.equals(task.taskName) && nodeId.equals(task.assignment.executorNode)).count();
+        return tasks.values()
+            .stream()
+            .filter(task -> taskName.equals(task.taskName) && nodeId.equals(task.assignment.executorNode))
+            .count();
     }
 
     @Override
-    public Version getMinimalSupportedVersion() {
-        return Version.CURRENT.minimumCompatibilityVersion();
+    public TransportVersion getMinimalSupportedVersion() {
+        return TransportVersions.MINIMUM_COMPATIBLE;
     }
 
     @Override
@@ -234,8 +239,8 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
 
         PersistentTasksCustomMetadata.Builder taskBuilder = PersistentTasksCustomMetadata.builder(tasks);
         for (PersistentTask<?> task : tasks.tasks()) {
-            if (task.getAssignment().getExecutorNode() != null &&
-                    clusterState.nodes().nodeExists(task.getAssignment().getExecutorNode()) == false) {
+            if (task.getAssignment().getExecutorNode() != null
+                && clusterState.nodes().nodeExists(task.getAssignment().getExecutorNode()) == false) {
                 taskBuilder.reassignTask(task.getId(), LOST_NODE_ASSIGNMENT);
             }
         }
@@ -274,8 +279,7 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
             if (this == o) return true;
             if (o == null || getClass() != o.getClass()) return false;
             Assignment that = (Assignment) o;
-            return Objects.equals(executorNode, that.executorNode) &&
-                    Objects.equals(explanation, that.explanation);
+            return Objects.equals(executorNode, that.executorNode) && Objects.equals(explanation, that.explanation);
         }
 
         @Override
@@ -320,8 +324,15 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
             this(task.id, task.allocationId, task.taskName, task.params, state, task.assignment, task.allocationId);
         }
 
-        private PersistentTask(final String id, final long allocationId, final String name, final P params,
-                               final PersistentTaskState state, final Assignment assignment, final Long allocationIdOnLastStatusUpdate) {
+        private PersistentTask(
+            final String id,
+            final long allocationId,
+            final String name,
+            final P params,
+            final PersistentTaskState state,
+            final Assignment assignment,
+            final Long allocationIdOnLastStatusUpdate
+        ) {
             this.id = id;
             this.allocationId = allocationId;
             this.taskName = name;
@@ -331,14 +342,16 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
             this.allocationIdOnLastStatusUpdate = allocationIdOnLastStatusUpdate;
             if (params != null) {
                 if (params.getWriteableName().equals(taskName) == false) {
-                    throw new IllegalArgumentException("params have to have the same writeable name as task. params: " +
-                            params.getWriteableName() + " task: " + taskName);
+                    throw new IllegalArgumentException(
+                        "params have to have the same writeable name as task. params: " + params.getWriteableName() + " task: " + taskName
+                    );
                 }
             }
             if (state != null) {
                 if (state.getWriteableName().equals(taskName) == false) {
-                    throw new IllegalArgumentException("status has to have the same writeable name as task. status: " +
-                            state.getWriteableName() + " task: " + taskName);
+                    throw new IllegalArgumentException(
+                        "status has to have the same writeable name as task. status: " + state.getWriteableName() + " task: " + taskName
+                    );
                 }
             }
         }
@@ -371,13 +384,13 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
             if (this == o) return true;
             if (o == null || getClass() != o.getClass()) return false;
             PersistentTask<?> that = (PersistentTask<?>) o;
-            return Objects.equals(id, that.id) &&
-                    allocationId == that.allocationId &&
-                    Objects.equals(taskName, that.taskName) &&
-                    Objects.equals(params, that.params) &&
-                    Objects.equals(state, that.state) &&
-                    Objects.equals(assignment, that.assignment) &&
-                    Objects.equals(allocationIdOnLastStatusUpdate, that.allocationIdOnLastStatusUpdate);
+            return Objects.equals(id, that.id)
+                && allocationId == that.allocationId
+                && Objects.equals(taskName, that.taskName)
+                && Objects.equals(params, that.params)
+                && Objects.equals(state, that.state)
+                && Objects.equals(assignment, that.assignment)
+                && Objects.equals(allocationIdOnLastStatusUpdate, that.allocationIdOnLastStatusUpdate);
         }
 
         @Override
@@ -462,11 +475,6 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
             builder.endObject();
             return builder;
         }
-
-        @Override
-        public boolean isFragment() {
-            return false;
-        }
     }
 
     private static class TaskBuilder<Params extends PersistentTaskParams> {
@@ -503,7 +511,6 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
             return this;
         }
 
-
         public TaskBuilder<Params> setAssignment(Assignment assignment) {
             this.assignment = assignment;
             return this;
@@ -526,16 +533,17 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
 
     public PersistentTasksCustomMetadata(StreamInput in) throws IOException {
         lastAllocationId = in.readLong();
-        tasks = in.readMap(StreamInput::readString, PersistentTask::new);
+        tasks = in.readMap(PersistentTask::new);
     }
 
     @Override
     public void writeTo(StreamOutput out) throws IOException {
         out.writeLong(lastAllocationId);
-        Map<String, PersistentTask<?>> filteredTasks = tasks.values().stream()
+        Map<String, PersistentTask<?>> filteredTasks = tasks.values()
+            .stream()
             .filter(t -> VersionedNamedWriteable.shouldSerialize(out, t.getParams()))
             .collect(Collectors.toMap(PersistentTask::getId, Function.identity()));
-        out.writeMap(filteredTasks, StreamOutput::writeString, (stream, value) -> value.writeTo(stream));
+        out.writeMap(filteredTasks, StreamOutput::writeWriteable);
     }
 
     public static NamedDiff<Metadata.Custom> readDiffFrom(StreamInput in) throws IOException {
@@ -543,16 +551,8 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
     }
 
     @Override
-    public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
-        builder.field("last_allocation_id", lastAllocationId);
-        builder.startArray("tasks");
-        {
-            for (PersistentTask<?> entry : tasks.values()) {
-                entry.toXContent(builder, params);
-            }
-        }
-        builder.endArray();
-        return builder;
+    public Iterator<? extends ToXContent> toXContentChunked(ToXContent.Params params) {
+        return ChunkedToXContent.builder(params).field("last_allocation_id", lastAllocationId).array("tasks", tasks.values().iterator());
     }
 
     public static Builder builder() {
@@ -568,8 +568,7 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
         private long lastAllocationId;
         private boolean changed;
 
-        private Builder() {
-        }
+        private Builder() {}
 
         private Builder(PersistentTasksCustomMetadata tasksInProgress) {
             if (tasksInProgress != null) {
@@ -590,7 +589,7 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
         }
 
         private <Params extends PersistentTaskParams> Builder setTasks(List<TaskBuilder<Params>> tasks) {
-            for (TaskBuilder builder : tasks) {
+            for (TaskBuilder<Params> builder : tasks) {
                 PersistentTask<?> task = builder.build();
                 this.tasks.put(task.getId(), task);
             }
@@ -607,11 +606,12 @@ public final class PersistentTasksCustomMetadata extends AbstractNamedDiffable<M
          * <p>
          * After the task is added its id can be found by calling {{@link #getLastAllocationId()}} method.
          */
-        public <Params extends PersistentTaskParams> Builder addTask(String taskId, String taskName, Params params,
-                                                                     Assignment assignment) {
+        public <Params extends PersistentTaskParams> Builder addTask(String taskId, String taskName, Params params, Assignment assignment) {
             changed = true;
-            PersistentTask<?> previousTask = tasks.put(taskId, new PersistentTask<>(taskId, taskName, params,
-                    getNextAllocationId(), assignment));
+            PersistentTask<?> previousTask = tasks.put(
+                taskId,
+                new PersistentTask<>(taskId, taskName, params, getNextAllocationId(), assignment)
+            );
             if (previousTask != null) {
                 throw new ResourceAlreadyExistsException("Trying to override task with id {" + taskId + "}");
             }
