@@ -1,25 +1,17 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.cluster.serialization;
 
-import org.elasticsearch.Version;
+import org.elasticsearch.TransportVersion;
+import org.elasticsearch.TransportVersions;
+import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.cluster.AbstractNamedDiffable;
 import org.elasticsearch.cluster.ClusterModule;
 import org.elasticsearch.cluster.ClusterName;
@@ -30,6 +22,7 @@ import org.elasticsearch.cluster.ESAllocationTestCase;
 import org.elasticsearch.cluster.NamedDiff;
 import org.elasticsearch.cluster.RestoreInProgress;
 import org.elasticsearch.cluster.SnapshotDeletionsInProgress;
+import org.elasticsearch.cluster.TestShardRoutingRoleStrategies;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.IndexTemplateMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
@@ -37,23 +30,28 @@ import org.elasticsearch.cluster.node.DiscoveryNodes;
 import org.elasticsearch.cluster.routing.RoutingTable;
 import org.elasticsearch.cluster.routing.allocation.AllocationService;
 import org.elasticsearch.common.UUIDs;
-import org.elasticsearch.common.collect.ImmutableOpenMap;
 import org.elasticsearch.common.io.stream.BytesStreamOutput;
 import org.elasticsearch.common.io.stream.NamedWriteableAwareStreamInput;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
-import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.xcontent.XContentBuilder;
+import org.elasticsearch.common.xcontent.ChunkedToXContent;
+import org.elasticsearch.index.IndexVersion;
+import org.elasticsearch.index.shard.IndexLongFieldRange;
+import org.elasticsearch.index.shard.ShardLongFieldRange;
 import org.elasticsearch.snapshots.Snapshot;
 import org.elasticsearch.snapshots.SnapshotId;
-import org.elasticsearch.test.VersionUtils;
+import org.elasticsearch.test.TransportVersionUtils;
+import org.elasticsearch.xcontent.ToXContent;
 
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 
+import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.nullValue;
@@ -61,47 +59,158 @@ import static org.hamcrest.Matchers.nullValue;
 public class ClusterSerializationTests extends ESAllocationTestCase {
 
     public void testClusterStateSerialization() throws Exception {
-        Metadata metadata = Metadata.builder()
-                .put(IndexMetadata.builder("test").settings(settings(Version.CURRENT)).numberOfShards(10).numberOfReplicas(1))
-                .build();
+        IndexLongFieldRange eventIngestedRangeInput = randomFrom(
+            IndexLongFieldRange.UNKNOWN,
+            IndexLongFieldRange.NO_SHARDS,
+            IndexLongFieldRange.EMPTY,
+            IndexLongFieldRange.NO_SHARDS.extendWithShardRange(0, 1, ShardLongFieldRange.of(100000, 200000))
+        );
 
-        RoutingTable routingTable = RoutingTable.builder()
-                .addAsNew(metadata.index("test"))
-                .build();
+        IndexMetadata.Builder indexMetadataBuilder = IndexMetadata.builder("test")
+            .settings(settings(IndexVersion.current()))
+            .numberOfShards(10)
+            .numberOfReplicas(1)
+            .eventIngestedRange(eventIngestedRangeInput, TransportVersions.V_8_15_0);
 
-        DiscoveryNodes nodes = DiscoveryNodes.builder().add(newNode("node1")).add(newNode("node2"))
-            .add(newNode("node3")).localNodeId("node1").masterNodeId("node2").build();
+        ClusterStateTestRecord result = createAndSerializeClusterState(indexMetadataBuilder, TransportVersion.current());
+
+        assertThat(result.serializedClusterState().getClusterName().value(), equalTo(result.clusterState().getClusterName().value()));
+        assertThat(result.serializedClusterState().routingTable().toString(), equalTo(result.clusterState().routingTable().toString()));
+
+        IndexLongFieldRange eventIngestedRangeOutput = result.serializedClusterState().getMetadata().index("test").getEventIngestedRange();
+        assertThat(eventIngestedRangeInput, equalTo(eventIngestedRangeOutput));
+
+        if (eventIngestedRangeInput.containsAllShardRanges() && eventIngestedRangeInput != IndexLongFieldRange.EMPTY) {
+            assertThat(eventIngestedRangeOutput.getMin(), equalTo(100000L));
+            assertThat(eventIngestedRangeOutput.getMax(), equalTo(200000L));
+        }
+    }
+
+    public void testClusterStateSerializationWithTimestampRangesWithOlderTransportVersion() throws Exception {
+        TransportVersion versionBeforeEventIngestedInClusterState = randomFrom(
+            TransportVersions.V_7_0_0,
+            TransportVersions.V_8_0_0,
+            TransportVersionUtils.getPreviousVersion(TransportVersions.V_8_15_0)
+        );
+        {
+            IndexLongFieldRange eventIngestedRangeInput = randomFrom(
+                IndexLongFieldRange.UNKNOWN,
+                IndexLongFieldRange.NO_SHARDS,
+                IndexLongFieldRange.EMPTY,
+                IndexLongFieldRange.NO_SHARDS.extendWithShardRange(0, 1, ShardLongFieldRange.of(100000, 200000))
+            );
+
+            IndexMetadata.Builder indexMetadataBuilder = IndexMetadata.builder("test")
+                .settings(settings(IndexVersion.current()))
+                .numberOfShards(10)
+                .numberOfReplicas(1)
+                .eventIngestedRange(eventIngestedRangeInput, versionBeforeEventIngestedInClusterState);
+
+            ClusterStateTestRecord result = createAndSerializeClusterState(indexMetadataBuilder, versionBeforeEventIngestedInClusterState);
+
+            assertThat(result.serializedClusterState().getClusterName().value(), equalTo(result.clusterState().getClusterName().value()));
+            assertThat(result.serializedClusterState().routingTable().toString(), equalTo(result.clusterState().routingTable().toString()));
+
+            IndexLongFieldRange eventIngestedRangeOutput = result.serializedClusterState()
+                .getMetadata()
+                .index("test")
+                .getEventIngestedRange();
+            // should always come back as UNKNOWN when an older transport version is passed in
+            assertSame(IndexLongFieldRange.UNKNOWN, eventIngestedRangeOutput);
+        }
+        {
+            // UNKNOWN is the only allowed state for event.ingested range in older versions, so this serialization test should fail
+            IndexLongFieldRange eventIngestedRangeInput = randomFrom(
+                IndexLongFieldRange.NO_SHARDS,
+                IndexLongFieldRange.EMPTY,
+                IndexLongFieldRange.NO_SHARDS.extendWithShardRange(0, 1, ShardLongFieldRange.of(100000, 200000))
+            );
+
+            IndexMetadata.Builder indexMetadataBuilder = IndexMetadata.builder("test")
+                .settings(settings(IndexVersion.current()))
+                .numberOfShards(10)
+                .numberOfReplicas(1)
+                .eventIngestedRange(eventIngestedRangeInput, TransportVersion.current());
+
+            AssertionError assertionError = expectThrows(
+                AssertionError.class,
+                () -> createAndSerializeClusterState(indexMetadataBuilder, versionBeforeEventIngestedInClusterState)
+            );
+
+            assertThat(
+                assertionError.getMessage(),
+                containsString("eventIngestedRange should be UNKNOWN until all nodes are on the new version")
+            );
+        }
+    }
+
+    /**
+     * @param clusterState original ClusterState created by helper method
+     * @param serializedClusterState serialized version of the clusterState
+     */
+    private record ClusterStateTestRecord(ClusterState clusterState, ClusterState serializedClusterState) {}
+
+    private static ClusterStateTestRecord createAndSerializeClusterState(
+        IndexMetadata.Builder indexMetadataBuilder,
+        TransportVersion transportVersion
+    ) throws IOException {
+        Metadata metadata = Metadata.builder().put(indexMetadataBuilder).build();
+
+        RoutingTable routingTable = RoutingTable.builder(TestShardRoutingRoleStrategies.DEFAULT_ROLE_ONLY)
+            .addAsNew(metadata.index("test"))
+            .build();
+
+        DiscoveryNodes nodes = DiscoveryNodes.builder()
+            .add(newNode("node1"))
+            .add(newNode("node2"))
+            .add(newNode("node3"))
+            .localNodeId("node1")
+            .masterNodeId("node2")
+            .build();
 
         ClusterState clusterState = ClusterState.builder(new ClusterName("clusterName1"))
-            .nodes(nodes).metadata(metadata).routingTable(routingTable).build();
+            .nodes(nodes)
+            .metadata(metadata)
+            .routingTable(routingTable)
+            .build();
 
         AllocationService strategy = createAllocationService();
-        clusterState = ClusterState.builder(clusterState).routingTable(strategy.reroute(clusterState, "reroute").routingTable()).build();
+        clusterState = ClusterState.builder(clusterState)
+            .routingTable(strategy.reroute(clusterState, "reroute", ActionListener.noop()).routingTable())
+            .build();
 
-        ClusterState serializedClusterState = ClusterState.Builder.fromBytes(ClusterState.Builder.toBytes(clusterState), newNode("node1"),
-            new NamedWriteableRegistry(ClusterModule.getNamedWriteables()));
+        BytesStreamOutput outStream = new BytesStreamOutput();
+        outStream.setTransportVersion(transportVersion);
+        clusterState.writeTo(outStream);
+        StreamInput inStream = new NamedWriteableAwareStreamInput(
+            outStream.bytes().streamInput(),
+            new NamedWriteableRegistry(ClusterModule.getNamedWriteables())
+        );
+        inStream.setTransportVersion(transportVersion);
+        ClusterState serializedClusterState = ClusterState.readFrom(inStream, null);
 
-        assertThat(serializedClusterState.getClusterName().value(), equalTo(clusterState.getClusterName().value()));
-
-        assertThat(serializedClusterState.routingTable().toString(), equalTo(clusterState.routingTable().toString()));
+        return new ClusterStateTestRecord(clusterState, serializedClusterState);
     }
 
     public void testRoutingTableSerialization() throws Exception {
         Metadata metadata = Metadata.builder()
-                .put(IndexMetadata.builder("test").settings(settings(Version.CURRENT)).numberOfShards(10).numberOfReplicas(1))
-                .build();
+            .put(IndexMetadata.builder("test").settings(settings(IndexVersion.current())).numberOfShards(10).numberOfReplicas(1))
+            .build();
 
-        RoutingTable routingTable = RoutingTable.builder()
-                .addAsNew(metadata.index("test"))
-                .build();
+        RoutingTable routingTable = RoutingTable.builder(TestShardRoutingRoleStrategies.DEFAULT_ROLE_ONLY)
+            .addAsNew(metadata.index("test"))
+            .build();
 
         DiscoveryNodes nodes = DiscoveryNodes.builder().add(newNode("node1")).add(newNode("node2")).add(newNode("node3")).build();
 
-        ClusterState clusterState = ClusterState.builder(ClusterName.CLUSTER_NAME_SETTING.getDefault(Settings.EMPTY)).nodes(nodes)
-            .metadata(metadata).routingTable(routingTable).build();
+        ClusterState clusterState = ClusterState.builder(ClusterName.DEFAULT)
+            .nodes(nodes)
+            .metadata(metadata)
+            .routingTable(routingTable)
+            .build();
 
         AllocationService strategy = createAllocationService();
-        RoutingTable source = strategy.reroute(clusterState, "reroute").routingTable();
+        RoutingTable source = strategy.reroute(clusterState, "reroute", ActionListener.noop()).routingTable();
 
         BytesStreamOutput outStream = new BytesStreamOutput();
         source.writeTo(outStream);
@@ -116,19 +225,31 @@ public class ClusterSerializationTests extends ESAllocationTestCase {
         boolean includeRestore = randomBoolean();
 
         ClusterState.Builder builder = ClusterState.builder(ClusterState.EMPTY_STATE)
-            .putCustom(SnapshotDeletionsInProgress.TYPE,
-                    SnapshotDeletionsInProgress.of(List.of(
-                            new SnapshotDeletionsInProgress.Entry(
-                                    Collections.singletonList(new SnapshotId("snap1", UUIDs.randomBase64UUID())), "repo1",
-                                    randomNonNegativeLong(), randomNonNegativeLong(), SnapshotDeletionsInProgress.State.STARTED))));
+            .putCustom(
+                SnapshotDeletionsInProgress.TYPE,
+                SnapshotDeletionsInProgress.of(
+                    List.of(
+                        new SnapshotDeletionsInProgress.Entry(
+                            "repo1",
+                            Collections.singletonList(new SnapshotId("snap1", UUIDs.randomBase64UUID())),
+                            randomNonNegativeLong(),
+                            randomNonNegativeLong(),
+                            SnapshotDeletionsInProgress.State.STARTED
+                        )
+                    )
+                )
+            );
         if (includeRestore) {
-            builder.putCustom(RestoreInProgress.TYPE,
+            builder.putCustom(
+                RestoreInProgress.TYPE,
                 new RestoreInProgress.Builder().add(
                     new RestoreInProgress.Entry(
-                        UUIDs.randomBase64UUID(), new Snapshot("repo2", new SnapshotId("snap2", UUIDs.randomBase64UUID())),
+                        UUIDs.randomBase64UUID(),
+                        new Snapshot("repo2", new SnapshotId("snap2", UUIDs.randomBase64UUID())),
                         RestoreInProgress.State.STARTED,
+                        false,
                         Collections.singletonList("index_name"),
-                        ImmutableOpenMap.of()
+                        Map.of()
                     )
                 ).build()
             );
@@ -140,12 +261,16 @@ public class ClusterSerializationTests extends ESAllocationTestCase {
 
         // serialize with current version
         BytesStreamOutput outStream = new BytesStreamOutput();
-        Version version = VersionUtils.randomVersionBetween(random(), Version.CURRENT.minimumCompatibilityVersion(), Version.CURRENT);
-        outStream.setVersion(version);
+        TransportVersion version = TransportVersionUtils.randomVersionBetween(
+            random(),
+            TransportVersions.MINIMUM_COMPATIBLE,
+            TransportVersion.current()
+        );
+        outStream.setTransportVersion(version);
         diffs.writeTo(outStream);
         StreamInput inStream = outStream.bytes().streamInput();
         inStream = new NamedWriteableAwareStreamInput(inStream, new NamedWriteableRegistry(ClusterModule.getNamedWriteables()));
-        inStream.setVersion(version);
+        inStream.setTransportVersion(version);
         Diff<ClusterState> serializedDiffs = ClusterState.readDiffFrom(inStream, clusterState.nodes().getLocalNode());
         ClusterState stateAfterDiffs = serializedDiffs.apply(ClusterState.EMPTY_STATE);
         assertThat(stateAfterDiffs.custom(RestoreInProgress.TYPE), includeRestore ? notNullValue() : nullValue());
@@ -154,11 +279,11 @@ public class ClusterSerializationTests extends ESAllocationTestCase {
         // remove the custom and try serializing again
         clusterState = ClusterState.builder(clusterState).removeCustom(SnapshotDeletionsInProgress.TYPE).incrementVersion().build();
         outStream = new BytesStreamOutput();
-        outStream.setVersion(version);
+        outStream.setTransportVersion(version);
         diffs.writeTo(outStream);
         inStream = outStream.bytes().streamInput();
         inStream = new NamedWriteableAwareStreamInput(inStream, new NamedWriteableRegistry(ClusterModule.getNamedWriteables()));
-        inStream.setVersion(version);
+        inStream.setTransportVersion(version);
         serializedDiffs = ClusterState.readDiffFrom(inStream, clusterState.nodes().getLocalNode());
         stateAfterDiffs = serializedDiffs.apply(stateAfterDiffs);
         assertThat(stateAfterDiffs.custom(RestoreInProgress.TYPE), includeRestore ? notNullValue() : nullValue());
@@ -167,57 +292,91 @@ public class ClusterSerializationTests extends ESAllocationTestCase {
 
     private ClusterState updateUsingSerialisedDiff(ClusterState original, Diff<ClusterState> diff) throws IOException {
         BytesStreamOutput outStream = new BytesStreamOutput();
-        outStream.setVersion(Version.CURRENT);
+        outStream.setTransportVersion(TransportVersion.current());
         diff.writeTo(outStream);
-        StreamInput inStream = new NamedWriteableAwareStreamInput(outStream.bytes().streamInput(),
-            new NamedWriteableRegistry(ClusterModule.getNamedWriteables()));
+        StreamInput inStream = new NamedWriteableAwareStreamInput(
+            outStream.bytes().streamInput(),
+            new NamedWriteableRegistry(ClusterModule.getNamedWriteables())
+        );
         diff = ClusterState.readDiffFrom(inStream, newNode("node-name"));
         return diff.apply(original);
     }
 
     public void testObjectReuseWhenApplyingClusterStateDiff() throws Exception {
-        IndexMetadata indexMetadata
-            = IndexMetadata.builder("test").settings(settings(Version.CURRENT)).numberOfShards(10).numberOfReplicas(1).build();
+        IndexMetadata indexMetadata = IndexMetadata.builder("test")
+            .settings(settings(IndexVersion.current()))
+            .numberOfShards(10)
+            .numberOfReplicas(1)
+            .build();
         IndexTemplateMetadata indexTemplateMetadata = IndexTemplateMetadata.builder("test-template")
-            .patterns(Arrays.asList(generateRandomStringArray(10, 100, false, false))).build();
+            .patterns(Arrays.asList(generateRandomStringArray(10, 100, false, false)))
+            .build();
         Metadata metadata = Metadata.builder().put(indexMetadata, true).put(indexTemplateMetadata).build();
 
-        RoutingTable routingTable = RoutingTable.builder().addAsNew(metadata.index("test")).build();
+        RoutingTable routingTable = RoutingTable.builder(TestShardRoutingRoleStrategies.DEFAULT_ROLE_ONLY)
+            .addAsNew(metadata.index("test"))
+            .build();
 
         ClusterState clusterState1 = ClusterState.builder(new ClusterName("clusterName1"))
-            .metadata(metadata).routingTable(routingTable).build();
+            .metadata(metadata)
+            .routingTable(routingTable)
+            .build();
         BytesStreamOutput outStream = new BytesStreamOutput();
-        outStream.setVersion(Version.CURRENT);
+        outStream.setTransportVersion(TransportVersion.current());
         clusterState1.writeTo(outStream);
-        StreamInput inStream = new NamedWriteableAwareStreamInput(outStream.bytes().streamInput(),
-            new NamedWriteableRegistry(ClusterModule.getNamedWriteables()));
-        ClusterState serializedClusterState1 = ClusterState.readFrom(inStream, newNode("node4"));
+        StreamInput inStream = new NamedWriteableAwareStreamInput(
+            outStream.bytes().streamInput(),
+            new NamedWriteableRegistry(ClusterModule.getNamedWriteables())
+        );
+        ClusterState serializedClusterState1 = ClusterState.readFrom(inStream, null);
 
         // Create a new, albeit equal, IndexMetadata object
-        ClusterState clusterState2 = ClusterState.builder(clusterState1).incrementVersion()
-            .metadata(Metadata.builder().put(IndexMetadata.builder(indexMetadata).numberOfReplicas(1).build(), true)).build();
-        assertNotSame("Should have created a new, equivalent, IndexMetadata object in clusterState2",
-            clusterState1.metadata().index("test"), clusterState2.metadata().index("test"));
+        ClusterState clusterState2 = ClusterState.builder(clusterState1)
+            .incrementVersion()
+            .metadata(Metadata.builder().put(IndexMetadata.builder(indexMetadata).numberOfReplicas(1).build(), true))
+            .build();
+        assertNotSame(
+            "Should have created a new, equivalent, IndexMetadata object in clusterState2",
+            clusterState1.metadata().index("test"),
+            clusterState2.metadata().index("test")
+        );
 
         ClusterState serializedClusterState2 = updateUsingSerialisedDiff(serializedClusterState1, clusterState2.diff(clusterState1));
-        assertSame("Unchanged metadata should not create new IndexMetadata objects",
-            serializedClusterState1.metadata().index("test"), serializedClusterState2.metadata().index("test"));
-        assertSame("Unchanged routing table should not create new IndexRoutingTable objects",
-            serializedClusterState1.routingTable().index("test"), serializedClusterState2.routingTable().index("test"));
+        assertSame(
+            "Unchanged metadata should not create new IndexMetadata objects",
+            serializedClusterState1.metadata().index("test"),
+            serializedClusterState2.metadata().index("test")
+        );
+        assertSame(
+            "Unchanged routing table should not create new IndexRoutingTable objects",
+            serializedClusterState1.routingTable().index("test"),
+            serializedClusterState2.routingTable().index("test")
+        );
 
         // Create a new and different IndexMetadata object
-        ClusterState clusterState3 = ClusterState.builder(clusterState1).incrementVersion()
-            .metadata(Metadata.builder().put(IndexMetadata.builder(indexMetadata).numberOfReplicas(2).build(), true)).build();
+        ClusterState clusterState3 = ClusterState.builder(clusterState1)
+            .incrementVersion()
+            .metadata(Metadata.builder().put(IndexMetadata.builder(indexMetadata).numberOfReplicas(2).build(), true))
+            .build();
         ClusterState serializedClusterState3 = updateUsingSerialisedDiff(serializedClusterState2, clusterState3.diff(clusterState2));
-        assertNotEquals("Should have a new IndexMetadata object",
-            serializedClusterState2.metadata().index("test"), serializedClusterState3.metadata().index("test"));
-        assertSame("Unchanged routing table should not create new IndexRoutingTable objects",
-            serializedClusterState2.routingTable().index("test"), serializedClusterState3.routingTable().index("test"));
+        assertNotEquals(
+            "Should have a new IndexMetadata object",
+            serializedClusterState2.metadata().index("test"),
+            serializedClusterState3.metadata().index("test")
+        );
+        assertSame(
+            "Unchanged routing table should not create new IndexRoutingTable objects",
+            serializedClusterState2.routingTable().index("test"),
+            serializedClusterState3.routingTable().index("test")
+        );
 
         assertSame("nodes", serializedClusterState2.nodes(), serializedClusterState3.nodes());
         assertSame("blocks", serializedClusterState2.blocks(), serializedClusterState3.blocks());
-        assertSame("template", serializedClusterState2.metadata().templates().get("test-template"),
-            serializedClusterState3.metadata().templates().get("test-template"));
+        assertSame(
+            "template",
+            serializedClusterState2.metadata().templates().get("test-template"),
+            serializedClusterState3.metadata().templates().get("test-template")
+        );
     }
 
     public static class TestCustomOne extends AbstractNamedDiffable<Custom> implements Custom {
@@ -239,13 +398,8 @@ public class ClusterSerializationTests extends ESAllocationTestCase {
         }
 
         @Override
-        public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
-            builder.startObject();
-            {
-                builder.field("custom_string_object", strObject);
-            }
-            builder.endObject();
-            return builder;
+        public Iterator<? extends ToXContent> toXContentChunked(ToXContent.Params params) {
+            return ChunkedToXContent.builder(params).object(b -> b.field("custom_string_object", strObject));
         }
 
         @Override
@@ -258,13 +412,13 @@ public class ClusterSerializationTests extends ESAllocationTestCase {
         }
 
         @Override
-        public Version getMinimalSupportedVersion() {
-            return Version.CURRENT;
+        public TransportVersion getMinimalSupportedVersion() {
+            return TransportVersion.current();
         }
 
     }
 
-    public static class TestCustomTwo extends AbstractNamedDiffable<Custom>  implements Custom {
+    public static class TestCustomTwo extends AbstractNamedDiffable<Custom> implements Custom {
 
         public static final String TYPE = "test_custom_two";
         private final Integer intObject;
@@ -283,13 +437,8 @@ public class ClusterSerializationTests extends ESAllocationTestCase {
         }
 
         @Override
-        public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
-            builder.startObject();
-            {
-                builder.field("custom_integer_object", intObject);
-            }
-            builder.endObject();
-            return builder;
+        public Iterator<? extends ToXContent> toXContentChunked(ToXContent.Params params) {
+            return ChunkedToXContent.builder(params).object(b -> b.field("custom_integer_object", intObject));
         }
 
         @Override
@@ -302,8 +451,8 @@ public class ClusterSerializationTests extends ESAllocationTestCase {
         }
 
         @Override
-        public Version getMinimalSupportedVersion() {
-            return Version.CURRENT.minimumCompatibilityVersion();
+        public TransportVersion getMinimalSupportedVersion() {
+            return TransportVersions.MINIMUM_COMPATIBLE;
         }
 
     }
@@ -326,13 +475,13 @@ public class ClusterSerializationTests extends ESAllocationTestCase {
 
         // serialize with current version
         BytesStreamOutput outStream = new BytesStreamOutput();
-        Version version = Version.CURRENT;
-        outStream.setVersion(version);
+        TransportVersion version = TransportVersion.current();
+        outStream.setTransportVersion(version);
         diffs.writeTo(outStream);
         StreamInput inStream = outStream.bytes().streamInput();
 
         inStream = new NamedWriteableAwareStreamInput(inStream, new NamedWriteableRegistry(entries));
-        inStream.setVersion(version);
+        inStream.setTransportVersion(version);
         Diff<ClusterState> serializedDiffs = ClusterState.readDiffFrom(inStream, clusterState.nodes().getLocalNode());
         ClusterState stateAfterDiffs = serializedDiffs.apply(ClusterState.EMPTY_STATE);
 
@@ -342,13 +491,13 @@ public class ClusterSerializationTests extends ESAllocationTestCase {
 
         // serialize with minimum compatibile version
         outStream = new BytesStreamOutput();
-        version = Version.CURRENT.minimumCompatibilityVersion();
-        outStream.setVersion(version);
+        version = TransportVersions.MINIMUM_COMPATIBLE;
+        outStream.setTransportVersion(version);
         diffs.writeTo(outStream);
         inStream = outStream.bytes().streamInput();
 
         inStream = new NamedWriteableAwareStreamInput(inStream, new NamedWriteableRegistry(entries));
-        inStream.setVersion(version);
+        inStream.setTransportVersion(version);
         serializedDiffs = ClusterState.readDiffFrom(inStream, clusterState.nodes().getLocalNode());
         stateAfterDiffs = serializedDiffs.apply(ClusterState.EMPTY_STATE);
 
