@@ -1,7 +1,8 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.core.enrich.action;
 
@@ -11,13 +12,12 @@ import org.elasticsearch.action.ActionType;
 import org.elasticsearch.action.support.master.MasterNodeReadRequest;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
-import org.elasticsearch.common.xcontent.ToXContentObject;
-import org.elasticsearch.common.xcontent.XContentBuilder;
+import org.elasticsearch.core.TimeValue;
+import org.elasticsearch.xcontent.ToXContentObject;
+import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xpack.core.enrich.EnrichPolicy;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -30,24 +30,21 @@ public class GetEnrichPolicyAction extends ActionType<GetEnrichPolicyAction.Resp
     public static final String NAME = "cluster:admin/xpack/enrich/get";
 
     private GetEnrichPolicyAction() {
-        super(NAME, Response::new);
+        super(NAME);
     }
 
     public static class Request extends MasterNodeReadRequest<Request> {
 
         private final List<String> names;
 
-        public Request() {
-            this.names = new ArrayList<>();
-        }
-
-        public Request(String[] names) {
-            this.names = Arrays.asList(names);
+        public Request(TimeValue masterNodeTimeout, String... names) {
+            super(masterNodeTimeout);
+            this.names = List.of(names);
         }
 
         public Request(StreamInput in) throws IOException {
             super(in);
-            this.names = in.readStringList();
+            this.names = in.readStringCollectionAsImmutableList();
         }
 
         @Override
@@ -86,17 +83,19 @@ public class GetEnrichPolicyAction extends ActionType<GetEnrichPolicyAction.Resp
         public Response(Map<String, EnrichPolicy> policies) {
             Objects.requireNonNull(policies, "policies cannot be null");
             // use a treemap to guarantee ordering in the set, then transform it to the list of named policies
-            this.policies = new TreeMap<>(policies).entrySet().stream()
-                .map(entry -> new EnrichPolicy.NamedPolicy(entry.getKey(), entry.getValue())).collect(Collectors.toList());
+            this.policies = new TreeMap<>(policies).entrySet()
+                .stream()
+                .map(entry -> new EnrichPolicy.NamedPolicy(entry.getKey(), entry.getValue()))
+                .collect(Collectors.toList());
         }
 
         public Response(StreamInput in) throws IOException {
-            policies = in.readList(EnrichPolicy.NamedPolicy::new);
+            policies = in.readCollectionAsList(EnrichPolicy.NamedPolicy::new);
         }
 
         @Override
         public void writeTo(StreamOutput out) throws IOException {
-            out.writeList(policies);
+            out.writeCollection(policies);
         }
 
         @Override
