@@ -1,35 +1,35 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 
 package org.elasticsearch.xpack.idp.action;
 
 import org.elasticsearch.ElasticsearchException;
-import org.elasticsearch.action.support.WriteRequest;
-import org.elasticsearch.client.Client;
 import org.elasticsearch.client.Request;
 import org.elasticsearch.client.RequestOptions;
 import org.elasticsearch.client.Response;
 import org.elasticsearch.client.ResponseException;
-import org.elasticsearch.common.Nullable;
+import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.settings.SecureString;
-import org.elasticsearch.common.unit.TimeValue;
-import org.elasticsearch.common.xcontent.XContentBuilder;
-import org.elasticsearch.common.xcontent.XContentFactory;
+import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.test.ESIntegTestCase;
-import org.elasticsearch.test.junit.annotations.TestLogging;
-import org.elasticsearch.test.rest.yaml.ObjectPath;
-import org.elasticsearch.xpack.core.security.action.CreateApiKeyRequestBuilder;
-import org.elasticsearch.xpack.core.security.action.CreateApiKeyResponse;
+import org.elasticsearch.test.rest.ObjectPath;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentFactory;
+import org.elasticsearch.xpack.core.security.action.apikey.CreateApiKeyRequestBuilder;
+import org.elasticsearch.xpack.core.security.action.apikey.CreateApiKeyResponse;
 import org.elasticsearch.xpack.core.security.authc.support.UsernamePasswordToken;
 import org.elasticsearch.xpack.idp.saml.sp.SamlServiceProviderDocument;
 import org.elasticsearch.xpack.idp.saml.sp.SamlServiceProviderIndex;
 import org.elasticsearch.xpack.idp.saml.support.SamlFactory;
 import org.elasticsearch.xpack.idp.saml.test.IdentityProviderIntegTestCase;
+import org.hamcrest.Matchers;
 import org.opensaml.core.xml.util.XMLObjectSupport;
 import org.opensaml.saml.common.SAMLObject;
 import org.opensaml.saml.saml2.core.AuthnRequest;
@@ -43,10 +43,10 @@ import org.opensaml.xmlsec.signature.support.SignatureConstants;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
+import java.time.Instant;
 import java.util.Base64;
 import java.util.Collections;
 import java.util.HashMap;
@@ -56,18 +56,17 @@ import java.util.concurrent.TimeUnit;
 import java.util.zip.Deflater;
 import java.util.zip.DeflaterOutputStream;
 
-import static org.elasticsearch.common.xcontent.XContentFactory.jsonBuilder;
+import static org.elasticsearch.action.support.WriteRequest.RefreshPolicy.IMMEDIATE;
+import static org.elasticsearch.action.support.WriteRequest.RefreshPolicy.NONE;
+import static org.elasticsearch.action.support.WriteRequest.RefreshPolicy.WAIT_UNTIL;
+import static org.elasticsearch.xcontent.XContentFactory.jsonBuilder;
 import static org.elasticsearch.xpack.core.security.authc.support.UsernamePasswordToken.basicAuthHeaderValue;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasKey;
-import static org.joda.time.DateTime.now;
 import static org.opensaml.saml.saml2.core.NameIDType.TRANSIENT;
 
 @ESIntegTestCase.ClusterScope(scope = ESIntegTestCase.Scope.SUITE, numClientNodes = 0, numDataNodes = 0)
-@TestLogging(value = "org.elasticsearch.xpack.idp.action.TransportPutSamlServiceProviderAction:TRACE," +
-    "org.elasticsearch.xpack.idp.saml.sp.SamlServiceProviderIndex:TRACE",
-    reason = "https://github.com/elastic/elasticsearch/issues/54423")
 public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
 
     private final SamlFactory samlFactory = new SamlFactory();
@@ -75,52 +74,73 @@ public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
     public void testIdpInitiatedSso() throws Exception {
         String acsUrl = "https://" + randomAlphaOfLength(12) + ".elastic-cloud.com/saml/acs";
         String entityId = SP_ENTITY_ID;
-        registerServiceProvider(entityId, acsUrl);
-        registerApplicationPrivileges();
-        ensureGreen(SamlServiceProviderIndex.INDEX_NAME);
+        setupTestData(entityId, acsUrl);
 
-        // User login a.k.a exchange the user credentials for an API Key
-        final String apiKeyCredentials = getApiKeyFromCredentials(SAMPLE_IDPUSER_NAME,
-            new SecureString(SAMPLE_IDPUSER_PASSWORD.toCharArray()));
-        // Make a request to init an SSO flow with the API Key as secondary authentication
-        Request request = new Request("POST", "/_idp/saml/init");
-        request.setOptions(RequestOptions.DEFAULT.toBuilder()
-            .addHeader("Authorization", basicAuthHeaderValue(CONSOLE_USER_NAME,
-                new SecureString(CONSOLE_USER_PASSWORD.toCharArray())))
-            .addHeader("es-secondary-authorization", "ApiKey " + apiKeyCredentials)
-            .build());
-        request.setJsonEntity("{ \"entity_id\": \"" + entityId + "\", \"acs\": \"" + acsUrl + "\" }");
-        Response initResponse = getRestClient().performRequest(request);
-        ObjectPath objectPath = ObjectPath.createFromResponse(initResponse);
+        ObjectPath objectPath = performSso(entityId, acsUrl, SAMPLE_IDPUSER_NAME, new SecureString(SAMPLE_IDPUSER_PASSWORD.toCharArray()));
         assertThat(objectPath.evaluate("post_url").toString(), equalTo(acsUrl));
-        final String body = objectPath.evaluate("saml_response").toString();
-        assertThat(body, containsString("Destination=\"" + acsUrl + "\""));
-        assertThat(body, containsString("<saml2:Audience>" + entityId + "</saml2:Audience>"));
-        assertThat(body, containsString("<saml2:NameID Format=\"" + TRANSIENT + "\">"));
-        Map<String, String> serviceProvider = objectPath.evaluate("service_provider");
-        assertThat(serviceProvider, hasKey("entity_id"));
-        assertThat(serviceProvider.get("entity_id"), equalTo(entityId));
+        assertSamlResponseForServiceProvider(objectPath, entityId, acsUrl);
+        assertSamlResponseUserData(objectPath, SAMPLE_IDPUSER_NAME, "superuser");
+    }
 
-        assertContainsAttributeWithValue(body, "principal", SAMPLE_IDPUSER_NAME);
-        assertContainsAttributeWithValue(body, "roles", "superuser");
+    public void testIdpInitiatedSsoWithMultipleRoles() throws Exception {
+        final String acsUrl = "https://" + randomAlphaOfLength(12) + ".elastic-cloud.com/saml/acs";
+        final String entityId = SP_ENTITY_ID;
+
+        setupTestData(entityId, acsUrl);
+
+        final String entityWildcard = entityId.substring(0, entityId.lastIndexOf(':')) + "*";
+        final String username = "user_" + randomAlphaOfLength(5);
+        final SecureString password = new SecureString(randomAlphaOfLength(8).toCharArray());
+        final String roleName = "role_" + username;
+        final RequestOptions adminOptions = RequestOptions.DEFAULT.toBuilder()
+            .addHeader(
+                "Authorization",
+                UsernamePasswordToken.basicAuthHeaderValue(SAMPLE_USER_NAME, new SecureString(SAMPLE_USER_PASSWORD.toCharArray()))
+            )
+            .build();
+        // This role has "editor" on the deployment itself, and "viewer" for the organization that owns the deployment
+        createRole(roleName, Strings.format("""
+            {
+              "cluster": [ "manage_own_api_key" ],
+              "applications": [
+                {
+                  "application": "elastic-cloud",
+                  "resources": [ "%s" ],
+                  "privileges": [ "sso:editor" ]
+                },
+                {
+                  "application": "elastic-cloud",
+                  "resources": [ "%s" ],
+                  "privileges": [ "sso:viewer" ]
+                }
+              ]
+            }
+            """, SP_ENTITY_ID, entityWildcard), adminOptions);
+        createUser(username, password, roleName, adminOptions);
+
+        ObjectPath objectPath = performSso(entityId, acsUrl, username, password);
+        assertThat(objectPath.evaluate("post_url").toString(), equalTo(acsUrl));
+        assertSamlResponseForServiceProvider(objectPath, entityId, acsUrl);
+        assertSamlResponseUserData(objectPath, username, "editor", "viewer");
     }
 
     public void testIdPInitiatedSsoFailsForUnknownSP() throws Exception {
         String acsUrl = "https://" + randomAlphaOfLength(12) + ".elastic-cloud.com/saml/acs";
         String entityId = SP_ENTITY_ID;
-        registerServiceProvider(entityId, acsUrl);
-        registerApplicationPrivileges();
-        ensureGreen(SamlServiceProviderIndex.INDEX_NAME);
+        setupTestData(entityId, acsUrl);
         // User login a.k.a exchange the user credentials for an API Key
-        final String apiKeyCredentials = getApiKeyFromCredentials(SAMPLE_IDPUSER_NAME,
-            new SecureString(SAMPLE_IDPUSER_PASSWORD.toCharArray()));
+        final String apiKeyCredentials = getApiKeyFromCredentials(
+            SAMPLE_IDPUSER_NAME,
+            new SecureString(SAMPLE_IDPUSER_PASSWORD.toCharArray())
+        );
         // Make a request to init an SSO flow with the API Key as secondary authentication
         Request request = new Request("POST", "/_idp/saml/init");
-        request.setOptions(RequestOptions.DEFAULT.toBuilder()
-            .addHeader("Authorization", basicAuthHeaderValue(CONSOLE_USER_NAME,
-                new SecureString(CONSOLE_USER_PASSWORD.toCharArray())))
-            .addHeader("es-secondary-authorization", "ApiKey " + apiKeyCredentials)
-            .build());
+        request.setOptions(
+            RequestOptions.DEFAULT.toBuilder()
+                .addHeader("Authorization", basicAuthHeaderValue(CONSOLE_USER_NAME, new SecureString(CONSOLE_USER_PASSWORD.toCharArray())))
+                .addHeader("es-secondary-authorization", "ApiKey " + apiKeyCredentials)
+                .build()
+        );
         request.setJsonEntity("{ \"entity_id\": \"" + entityId + randomAlphaOfLength(3) + "\", \"acs\": \"" + acsUrl + "\" }");
         ResponseException e = expectThrows(ResponseException.class, () -> getRestClient().performRequest(request));
         assertThat(e.getMessage(), containsString("is not known to this Identity Provider"));
@@ -130,9 +150,7 @@ public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
     public void testIdPInitiatedSsoFailsWithoutSecondaryAuthentication() throws Exception {
         String acsUrl = "https://" + randomAlphaOfLength(12) + ".elastic-cloud.com/saml/acs";
         String entityId = SP_ENTITY_ID;
-        registerServiceProvider(entityId, acsUrl);
-        registerApplicationPrivileges();
-        ensureGreen(SamlServiceProviderIndex.INDEX_NAME);
+        setupTestData(entityId, acsUrl);
         // Make a request to init an SSO flow with the API Key as secondary authentication
         Request request = new Request("POST", "/_idp/saml/init");
         request.setOptions(REQUEST_OPTIONS_AS_CONSOLE_USER);
@@ -144,17 +162,20 @@ public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
     public void testSpInitiatedSso() throws Exception {
         String acsUrl = "https://" + randomAlphaOfLength(12) + ".elastic-cloud.com/saml/acs";
         String entityId = SP_ENTITY_ID;
-        registerServiceProvider(entityId, acsUrl);
-        registerApplicationPrivileges();
-        ensureGreen(SamlServiceProviderIndex.INDEX_NAME);
+        setupTestData(entityId, acsUrl);
         // Validate incoming authentication request
         Request validateRequest = new Request("POST", "/_idp/saml/validate");
         validateRequest.setOptions(REQUEST_OPTIONS_AS_CONSOLE_USER);
         final String nameIdFormat = TRANSIENT;
         final String relayString = randomBoolean() ? randomAlphaOfLength(8) : null;
         final boolean forceAuthn = true;
-        final AuthnRequest authnRequest = buildAuthnRequest(entityId, new URL(acsUrl),
-            new URL("https://idp.org/sso/redirect"), nameIdFormat, forceAuthn);
+        final AuthnRequest authnRequest = buildAuthnRequest(
+            entityId,
+            new URL(acsUrl),
+            new URL("https://idp.org/sso/redirect"),
+            nameIdFormat,
+            forceAuthn
+        );
         final String query = getQueryString(authnRequest, relayString, false, null);
         validateRequest.setJsonEntity("{\"authn_request_query\":\"" + query + "\"}");
         Response validateResponse = getRestClient().performRequest(validateRequest);
@@ -172,22 +193,23 @@ public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
         final String expectedInResponeTo = authnState.get("authn_request_id");
 
         // User login a.k.a exchange the user credentials for an API Key
-        final String apiKeyCredentials = getApiKeyFromCredentials(SAMPLE_IDPUSER_NAME,
-            new SecureString(SAMPLE_IDPUSER_PASSWORD.toCharArray()));
+        final String apiKeyCredentials = getApiKeyFromCredentials(
+            SAMPLE_IDPUSER_NAME,
+            new SecureString(SAMPLE_IDPUSER_PASSWORD.toCharArray())
+        );
         // Make a request to init an SSO flow with the API Key as secondary authentication
         Request initRequest = new Request("POST", "/_idp/saml/init");
-        initRequest.setOptions(RequestOptions.DEFAULT.toBuilder()
-            .addHeader("Authorization", basicAuthHeaderValue(CONSOLE_USER_NAME,
-                new SecureString(CONSOLE_USER_PASSWORD.toCharArray())))
-            .addHeader("es-secondary-authorization", "ApiKey " + apiKeyCredentials)
-            .build());
+        initRequest.setOptions(
+            RequestOptions.DEFAULT.toBuilder()
+                .addHeader("Authorization", basicAuthHeaderValue(CONSOLE_USER_NAME, new SecureString(CONSOLE_USER_PASSWORD.toCharArray())))
+                .addHeader("es-secondary-authorization", "ApiKey " + apiKeyCredentials)
+                .build()
+        );
         XContentBuilder authnStateBuilder = jsonBuilder();
         authnStateBuilder.map(authnState);
-        initRequest.setJsonEntity("{"
-            + ("\"entity_id\":\"" + entityId + "\",")
-            + ("\"acs\":\"" + serviceProvider.get("acs") + "\",")
-            + ("\"authn_state\":" + Strings.toString(authnStateBuilder))
-            + "}");
+        initRequest.setJsonEntity(Strings.format("""
+            {"entity_id":"%s","acs":"%s","authn_state":%s}
+            """, entityId, serviceProvider.get("acs"), Strings.toString(authnStateBuilder)));
         Response initResponse = getRestClient().performRequest(initRequest);
         ObjectPath initResponseObject = ObjectPath.createFromResponse(initResponse);
         assertThat(initResponseObject.evaluate("post_url").toString(), equalTo(acsUrl));
@@ -201,8 +223,8 @@ public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
         Map<String, String> sp = initResponseObject.evaluate("service_provider");
         assertThat(sp, hasKey("entity_id"));
         assertThat(sp.get("entity_id"), equalTo(entityId));
-        assertContainsAttributeWithValue(body, "principal", SAMPLE_IDPUSER_NAME);
-        assertContainsAttributeWithValue(body, "roles", "superuser");
+        assertContainsAttributeWithValues(body, "principal", SAMPLE_IDPUSER_NAME);
+        assertContainsAttributeWithValues(body, "roles", "superuser");
     }
 
     public void testSpInitiatedSsoFailsForUserWithNoAccess() throws Exception {
@@ -216,8 +238,13 @@ public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
         final String nameIdFormat = TRANSIENT;
         final String relayString = randomBoolean() ? randomAlphaOfLength(8) : null;
         final boolean forceAuthn = true;
-        final AuthnRequest authnRequest = buildAuthnRequest(entityId, new URL(acsUrl),
-            new URL("https://idp.org/sso/redirect"), nameIdFormat, forceAuthn);
+        final AuthnRequest authnRequest = buildAuthnRequest(
+            entityId,
+            new URL(acsUrl),
+            new URL("https://idp.org/sso/redirect"),
+            nameIdFormat,
+            forceAuthn
+        );
         final String query = getQueryString(authnRequest, relayString, false, null);
         validateRequest.setJsonEntity("{\"authn_request_query\":\"" + query + "\"}");
         Response validateResponse = getRestClient().performRequest(validateRequest);
@@ -235,46 +262,56 @@ public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
         final String expectedInResponeTo = authnState.get("authn_request_id");
 
         // User login a.k.a exchange the user credentials for an API Key - user can authenticate but shouldn't have access this SP
-        final String apiKeyCredentials = getApiKeyFromCredentials(SAMPLE_USER_NAME,
-            new SecureString(SAMPLE_USER_PASSWORD.toCharArray()));
+        final String apiKeyCredentials = getApiKeyFromCredentials(SAMPLE_USER_NAME, new SecureString(SAMPLE_USER_PASSWORD.toCharArray()));
         // Make a request to init an SSO flow with the API Key as secondary authentication
         Request initRequest = new Request("POST", "/_idp/saml/init");
-        initRequest.setOptions(RequestOptions.DEFAULT.toBuilder()
-            .addHeader("Authorization", basicAuthHeaderValue(CONSOLE_USER_NAME,
-                new SecureString(CONSOLE_USER_PASSWORD.toCharArray())))
-            .addHeader("es-secondary-authorization", "ApiKey " + apiKeyCredentials)
-            .build());
+        initRequest.setOptions(
+            RequestOptions.DEFAULT.toBuilder()
+                .addHeader("Authorization", basicAuthHeaderValue(CONSOLE_USER_NAME, new SecureString(CONSOLE_USER_PASSWORD.toCharArray())))
+                .addHeader("es-secondary-authorization", "ApiKey " + apiKeyCredentials)
+                .build()
+        );
         XContentBuilder authnStateBuilder = jsonBuilder();
         authnStateBuilder.map(authnState);
-        initRequest.setJsonEntity("{ \"entity_id\":\"" + entityId + "\", \"acs\":\"" + acsUrl + "\"," +
-            "\"authn_state\":" + Strings.toString(authnStateBuilder) + "}");
-        Response initResponse = getRestClient().performRequest(initRequest);
-        ObjectPath initResponseObject = ObjectPath.createFromResponse(initResponse);
-        assertThat(initResponseObject.evaluate("post_url").toString(), equalTo(acsUrl));
-        final String body = initResponseObject.evaluate("saml_response").toString();
+        initRequest.setJsonEntity(Strings.format("""
+            {"entity_id":"%s", "acs":"%s","authn_state":%s}
+            """, entityId, acsUrl, Strings.toString(authnStateBuilder)));
+        ResponseException e = expectThrows(ResponseException.class, () -> getRestClient().performRequest(initRequest));
+        Response response = e.getResponse();
+        assertThat(response.getStatusLine().getStatusCode(), equalTo(403));
+        ObjectPath initResponseObject = ObjectPath.createFromResponse(response);
+        assertThat(initResponseObject.evaluate("status"), equalTo(403));
+        final String baseSamlResponseObjectPath = "error.saml_initiate_single_sign_on_response.";
+        assertThat(initResponseObject.evaluate(baseSamlResponseObjectPath + "post_url").toString(), equalTo(acsUrl));
+        final String body = initResponseObject.evaluate(baseSamlResponseObjectPath + "saml_response").toString();
         assertThat(body, containsString("<saml2p:StatusCode Value=\"urn:oasis:names:tc:SAML:2.0:status:Requester\"/>"));
         assertThat(body, containsString("InResponseTo=\"" + expectedInResponeTo + "\""));
-        Map<String, String> sp = initResponseObject.evaluate("service_provider");
+        Map<String, String> sp = initResponseObject.evaluate(baseSamlResponseObjectPath + "service_provider");
         assertThat(sp, hasKey("entity_id"));
         assertThat(sp.get("entity_id"), equalTo(entityId));
-        assertThat(initResponseObject.evaluate("error"),
-            equalTo("User [" + SAMPLE_USER_NAME + "] is not permitted to access service [" + entityId + "]"));
+        assertThat(
+            initResponseObject.evaluate(baseSamlResponseObjectPath + "error"),
+            equalTo("User [" + SAMPLE_USER_NAME + "] is not permitted to access service [" + entityId + "]")
+        );
     }
 
     public void testSpInitiatedSsoFailsForUnknownSp() throws Exception {
         String acsUrl = "https://" + randomAlphaOfLength(12) + ".elastic-cloud.com/saml/acs";
         String entityId = SP_ENTITY_ID;
-        registerServiceProvider(entityId, acsUrl);
-        registerApplicationPrivileges();
-        ensureGreen(SamlServiceProviderIndex.INDEX_NAME);
+        setupTestData(entityId, acsUrl);
         // Validate incoming authentication request
         Request validateRequest = new Request("POST", "/_idp/saml/validate");
         validateRequest.setOptions(REQUEST_OPTIONS_AS_CONSOLE_USER);
         final String nameIdFormat = TRANSIENT;
         final String relayString = null;
         final boolean forceAuthn = randomBoolean();
-        final AuthnRequest authnRequest = buildAuthnRequest(entityId + randomAlphaOfLength(4), new URL(acsUrl),
-            new URL("https://idp.org/sso/redirect"), nameIdFormat, forceAuthn);
+        final AuthnRequest authnRequest = buildAuthnRequest(
+            entityId + randomAlphaOfLength(4),
+            new URL(acsUrl),
+            new URL("https://idp.org/sso/redirect"),
+            nameIdFormat,
+            forceAuthn
+        );
         final String query = getQueryString(authnRequest, relayString, false, null);
         validateRequest.setJsonEntity("{\"authn_request_query\":\"" + query + "\"}");
         ResponseException e = expectThrows(ResponseException.class, () -> getRestClient().performRequest(validateRequest));
@@ -285,9 +322,7 @@ public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
     public void testSpInitiatedSsoFailsForMalformedRequest() throws Exception {
         String acsUrl = "https://" + randomAlphaOfLength(12) + ".elastic-cloud.com/saml/acs";
         String entityId = SP_ENTITY_ID;
-        registerServiceProvider(entityId, acsUrl);
-        registerApplicationPrivileges();
-        ensureGreen(SamlServiceProviderIndex.INDEX_NAME);
+        setupTestData(entityId, acsUrl);
 
         // Validate incoming authentication request
         Request validateRequest = new Request("POST", "/_idp/saml/validate");
@@ -295,8 +330,13 @@ public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
         final String nameIdFormat = TRANSIENT;
         final String relayString = null;
         final boolean forceAuthn = randomBoolean();
-        final AuthnRequest authnRequest = buildAuthnRequest(entityId + randomAlphaOfLength(4), new URL(acsUrl),
-            new URL("https://idp.org/sso/redirect"), nameIdFormat, forceAuthn);
+        final AuthnRequest authnRequest = buildAuthnRequest(
+            entityId + randomAlphaOfLength(4),
+            new URL(acsUrl),
+            new URL("https://idp.org/sso/redirect"),
+            nameIdFormat,
+            forceAuthn
+        );
         final String query = getQueryString(authnRequest, relayString, false, null);
 
         // Skip http parameter name
@@ -313,6 +353,45 @@ public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
         assertThat(e1.getResponse().getStatusLine().getStatusCode(), equalTo(RestStatus.BAD_REQUEST.getStatus()));
     }
 
+    private ObjectPath performSso(String entityId, String acsUrl, String username, SecureString password) throws IOException {
+        // User login a.k.a exchange the user credentials for an API Key
+        final String apiKeyCredentials = getApiKeyFromCredentials(username, password);
+        // Make a request to init an SSO flow with the API Key as secondary authentication
+        Request request = new Request("POST", "/_idp/saml/init");
+        request.setOptions(
+            RequestOptions.DEFAULT.toBuilder()
+                .addHeader("Authorization", basicAuthHeaderValue(CONSOLE_USER_NAME, new SecureString(CONSOLE_USER_PASSWORD.toCharArray())))
+                .addHeader("es-secondary-authorization", "ApiKey " + apiKeyCredentials)
+                .build()
+        );
+        request.setJsonEntity("{ \"entity_id\": \"" + entityId + "\", \"acs\": \"" + acsUrl + "\" }");
+        Response initResponse = getRestClient().performRequest(request);
+        ObjectPath objectPath = ObjectPath.createFromResponse(initResponse);
+        return objectPath;
+    }
+
+    private void assertSamlResponseForServiceProvider(ObjectPath objectPath, String entityId, String acsUrl) throws IOException {
+        String body = objectPath.evaluate("saml_response").toString();
+        assertThat(body, containsString("Destination=\"" + acsUrl + "\""));
+        assertThat(body, containsString("<saml2:Audience>" + entityId + "</saml2:Audience>"));
+        assertThat(body, containsString("<saml2:NameID Format=\"" + TRANSIENT + "\">"));
+        Map<String, String> serviceProvider = objectPath.evaluate("service_provider");
+        assertThat(serviceProvider, hasKey("entity_id"));
+        assertThat(serviceProvider.get("entity_id"), equalTo(entityId));
+    }
+
+    private void assertSamlResponseUserData(ObjectPath objectPath, String idpuserName, String... roles) throws IOException {
+        var body = objectPath.evaluate("saml_response").toString();
+        assertContainsAttributeWithValues(body, "principal", idpuserName);
+        assertContainsAttributeWithValues(body, "roles", roles);
+    }
+
+    private void setupTestData(String entityId, String acsUrl) throws Exception {
+        registerServiceProvider(entityId, acsUrl);
+        registerApplicationPrivileges();
+        ensureGreen(SamlServiceProviderIndex.INDEX_NAME);
+    }
+
     private void registerServiceProvider(String entityId, String acsUrl) throws Exception {
         internalCluster().ensureAtLeastNumDataNodes(1);
         ensureYellowAndNoInitializingShards();
@@ -322,16 +401,17 @@ public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
         spFields.put(SamlServiceProviderDocument.Fields.ENTITY_ID.getPreferredName(), entityId);
         spFields.put(SamlServiceProviderDocument.Fields.NAME_ID.getPreferredName(), TRANSIENT);
         spFields.put(SamlServiceProviderDocument.Fields.NAME.getPreferredName(), "Dummy SP");
-        spFields.put("attributes", Map.of(
-            "principal", "https://saml.elasticsearch.org/attributes/principal",
-            "roles", "https://saml.elasticsearch.org/attributes/roles"
-        ));
-        spFields.put("privileges", Map.of(
-            "resource", entityId,
-            "roles", Set.of("sso:(\\w+)")
-        ));
-        Request request =
-            new Request("PUT", "/_idp/saml/sp/" + urlEncode(entityId) + "?refresh=" + WriteRequest.RefreshPolicy.IMMEDIATE.getValue());
+        spFields.put(
+            "attributes",
+            Map.of(
+                "principal",
+                "https://saml.elasticsearch.org/attributes/principal",
+                "roles",
+                "https://saml.elasticsearch.org/attributes/roles"
+            )
+        );
+        spFields.put("privileges", Map.of("resource", entityId, "roles", Set.of("sso:(\\w+)")));
+        Request request = new Request("PUT", "/_idp/saml/sp/" + urlEncode(entityId) + "?refresh=" + IMMEDIATE.getValue());
         request.setOptions(REQUEST_OPTIONS_AS_CONSOLE_USER);
         final XContentBuilder builder = XContentFactory.jsonBuilder();
         builder.map(spFields);
@@ -350,11 +430,17 @@ public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
     }
 
     private void registerApplicationPrivileges() throws IOException {
-        registerApplicationPrivileges(Map.of("deployment_admin", Set.of("sso:superuser"), "deployment_viewer", Set.of("sso:viewer")));
+        registerApplicationPrivileges(
+            Map.ofEntries(
+                Map.entry("deployment_admin", Set.of("sso:superuser")),
+                Map.entry("deployment_editor", Set.of("sso:editor")),
+                Map.entry("deployment_viewer", Set.of("sso:viewer"))
+            )
+        );
     }
 
     private void registerApplicationPrivileges(Map<String, Set<String>> privileges) throws IOException {
-        Request request = new Request("PUT", "/_security/privilege?refresh=" + WriteRequest.RefreshPolicy.IMMEDIATE.getValue());
+        Request request = new Request("PUT", "/_security/privilege?refresh=" + IMMEDIATE.getValue());
         request.setOptions(REQUEST_OPTIONS_AS_CONSOLE_USER);
         final XContentBuilder builder = XContentFactory.jsonBuilder();
         builder.startObject();
@@ -376,16 +462,38 @@ public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
         assertThat(response.getStatusLine().getStatusCode(), equalTo(200));
     }
 
+    private void createRole(String roleName, String roleBody, RequestOptions options) throws IOException {
+        Request req = new Request("PUT", "/_security/role/" + roleName);
+        req.setJsonEntity(roleBody);
+        req.setOptions(options);
+        getRestClient().performRequest(req);
+    }
+
+    private void createUser(String userName, SecureString password, String roleName, RequestOptions options) throws IOException {
+        final Request req = new Request("PUT", "/_security/user/" + userName);
+        final String body = Strings.format("""
+            {
+              "username": "%s",
+              "full_name": "Test User (%s)",
+              "password": "%s",
+              "roles": [ "%s" ]
+            }
+            """, userName, getTestName(), password, roleName);
+        req.setJsonEntity(body);
+        req.setOptions(options);
+        getRestClient().performRequest(req);
+    }
+
     private String getApiKeyFromCredentials(String username, SecureString password) {
-        Client client = client().filterWithHeader(Collections.singletonMap("Authorization",
-            UsernamePasswordToken.basicAuthHeaderValue(username, password)));
-        final CreateApiKeyResponse response = new CreateApiKeyRequestBuilder(client)
-            .setName("test key")
+        Client client = client().filterWithHeader(
+            Collections.singletonMap("Authorization", UsernamePasswordToken.basicAuthHeaderValue(username, password))
+        );
+        final CreateApiKeyResponse response = new CreateApiKeyRequestBuilder(client).setName("test key")
             .setExpiration(TimeValue.timeValueHours(TimeUnit.DAYS.toHours(7L)))
+            .setRefreshPolicy(randomFrom(WAIT_UNTIL, IMMEDIATE, NONE))
             .get();
         assertNotNull(response);
-        return Base64.getEncoder().encodeToString(
-            (response.getId() + ":" + response.getKey().toString()).getBytes(StandardCharsets.UTF_8));
+        return Base64.getEncoder().encodeToString((response.getId() + ":" + response.getKey().toString()).getBytes(StandardCharsets.UTF_8));
     }
 
     private AuthnRequest buildAuthnRequest(String entityId, URL acs, URL destination, String nameIdFormat, boolean forceAuthn) {
@@ -396,7 +504,7 @@ public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
         final AuthnRequest authnRequest = samlFactory.buildObject(AuthnRequest.class, AuthnRequest.DEFAULT_ELEMENT_NAME);
         authnRequest.setID(samlFactory.secureIdentifier());
         authnRequest.setIssuer(issuer);
-        authnRequest.setIssueInstant(now());
+        authnRequest.setIssueInstant(Instant.now());
         authnRequest.setAssertionConsumerServiceURL(acs.toString());
         authnRequest.setDestination(destination.toString());
         authnRequest.setNameIDPolicy(nameIDPolicy);
@@ -427,14 +535,16 @@ public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
         return Base64.getEncoder().encodeToString(bytes);
     }
 
-    private static String urlEncode(String param) throws UnsupportedEncodingException {
-        return URLEncoder.encode(param, StandardCharsets.UTF_8.name());
+    private static String urlEncode(String param) {
+        return URLEncoder.encode(param, StandardCharsets.UTF_8);
     }
 
     private String deflateAndBase64Encode(SAMLObject message) throws Exception {
         Deflater deflater = new Deflater(Deflater.DEFLATED, true);
-        try (ByteArrayOutputStream bytesOut = new ByteArrayOutputStream();
-             DeflaterOutputStream deflaterStream = new DeflaterOutputStream(bytesOut, deflater)) {
+        try (
+            ByteArrayOutputStream bytesOut = new ByteArrayOutputStream();
+            DeflaterOutputStream deflaterStream = new DeflaterOutputStream(bytesOut, deflater)
+        ) {
             String messageStr = samlFactory.toString(XMLObjectSupport.marshall(message), false);
             deflaterStream.write(messageStr.getBytes(StandardCharsets.UTF_8));
             deflaterStream.finish();
@@ -450,10 +560,30 @@ public class SamlIdentityProviderTests extends IdentityProviderIntegTestCase {
         return XMLSigningUtil.signWithURI(credential, algo, content);
     }
 
-    private void assertContainsAttributeWithValue(String message, String attribute, String value) {
-        assertThat(message, containsString("<saml2:Attribute FriendlyName=\"" + attribute + "\" Name=\"https://saml.elasticsearch" +
-            ".org/attributes/" + attribute + "\" NameFormat=\"urn:oasis:names:tc:SAML:2.0:attrname-format:uri\"><saml2:AttributeValue " +
-            "xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:type=\"xsd:string\">" + value + "</saml2:AttributeValue></saml2" +
-            ":Attribute>"));
+    private void assertContainsAttributeWithValues(String message, String attribute, String... values) {
+        final String startAttribute = Strings.format("""
+            <saml2:Attribute FriendlyName="%s" Name="https://saml.elasticsearch.org/attributes/%s" \
+            NameFormat="urn:oasis:names:tc:SAML:2.0:attrname-format:uri">""", attribute, attribute);
+        assertThat(message, containsString(startAttribute));
+        final int posStart = message.indexOf(startAttribute);
+        assertThat(posStart, Matchers.greaterThan(0));
+
+        final String endAttribute = "</saml2:Attribute>";
+        assertThat(message, containsString(endAttribute));
+        final int posEnd = message.indexOf(endAttribute, posStart);
+        assertThat(posEnd, Matchers.greaterThan(posStart));
+
+        final String attributeContent = message.substring(posStart + startAttribute.length(), posEnd);
+
+        for (String value : values) {
+            assertThat(
+                attributeContent,
+                containsString(
+                    "<saml2:AttributeValue xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:type=\"xsd:string\">"
+                        + value
+                        + "</saml2:AttributeValue>"
+                )
+            );
+        }
     }
 }
