@@ -1,31 +1,29 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.rollup.action;
 
-
 import org.apache.logging.log4j.Logger;
 import org.elasticsearch.ResourceAlreadyExistsException;
-import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionListener;
-import org.elasticsearch.action.admin.indices.create.CreateIndexAction;
 import org.elasticsearch.action.admin.indices.create.CreateIndexRequest;
+import org.elasticsearch.action.admin.indices.create.TransportCreateIndexAction;
 import org.elasticsearch.action.admin.indices.mapping.get.GetMappingsAction;
 import org.elasticsearch.action.admin.indices.mapping.get.GetMappingsRequest;
 import org.elasticsearch.action.admin.indices.mapping.get.GetMappingsResponse;
-import org.elasticsearch.action.admin.indices.mapping.put.PutMappingAction;
 import org.elasticsearch.action.admin.indices.mapping.put.PutMappingRequest;
+import org.elasticsearch.action.admin.indices.mapping.put.TransportPutMappingAction;
 import org.elasticsearch.action.support.master.AcknowledgedResponse;
-import org.elasticsearch.client.Client;
+import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.metadata.MappingMetadata;
-import org.elasticsearch.common.collect.ImmutableOpenMap;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.persistent.PersistentTasksCustomMetadata;
 import org.elasticsearch.persistent.PersistentTasksService;
 import org.elasticsearch.search.aggregations.bucket.histogram.DateHistogramInterval;
 import org.elasticsearch.test.ESTestCase;
-import org.elasticsearch.test.VersionUtils;
 import org.elasticsearch.xpack.core.rollup.ConfigTestHelpers;
 import org.elasticsearch.xpack.core.rollup.RollupField;
 import org.elasticsearch.xpack.core.rollup.action.PutRollupJobAction;
@@ -33,19 +31,17 @@ import org.elasticsearch.xpack.core.rollup.job.DateHistogramGroupConfig;
 import org.elasticsearch.xpack.core.rollup.job.GroupConfig;
 import org.elasticsearch.xpack.core.rollup.job.RollupJob;
 import org.elasticsearch.xpack.core.rollup.job.RollupJobConfig;
-import org.elasticsearch.xpack.rollup.Rollup;
 import org.mockito.ArgumentCaptor;
 
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.eq;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
@@ -71,12 +67,12 @@ public class PutJobStateMachineTests extends ESTestCase {
         doAnswer(invocation -> {
             requestCaptor.getValue().onFailure(new RuntimeException("something bad"));
             return null;
-        }).when(client).execute(eq(CreateIndexAction.INSTANCE), any(CreateIndexRequest.class), requestCaptor.capture());
+        }).when(client).execute(eq(TransportCreateIndexAction.TYPE), any(CreateIndexRequest.class), requestCaptor.capture());
 
         TransportPutRollupJobAction.createIndex(job, testListener, mock(PersistentTasksService.class), client, logger);
 
         // ResourceAlreadyExists should trigger a GetMapping next
-        verify(client).execute(eq(CreateIndexAction.INSTANCE), any(CreateIndexRequest.class), any());
+        verify(client).execute(eq(TransportCreateIndexAction.TYPE), any(CreateIndexRequest.class), any());
     }
 
     @SuppressWarnings({ "unchecked", "rawtypes" })
@@ -85,9 +81,7 @@ public class PutJobStateMachineTests extends ESTestCase {
 
         ActionListener<AcknowledgedResponse> testListener = ActionListener.wrap(response -> {
             fail("Listener success should not have been triggered.");
-        }, e -> {
-            assertThat(e.getCause().getMessage(), equalTo("Ending"));
-        });
+        }, e -> { assertThat(e.getCause().getMessage(), equalTo("Ending")); });
 
         Logger logger = mock(Logger.class);
         Client client = mock(Client.class);
@@ -96,7 +90,7 @@ public class PutJobStateMachineTests extends ESTestCase {
         doAnswer(invocation -> {
             requestCaptor.getValue().onFailure(new ResourceAlreadyExistsException(job.getConfig().getRollupIndex()));
             return null;
-        }).when(client).execute(eq(CreateIndexAction.INSTANCE), any(CreateIndexRequest.class), requestCaptor.capture());
+        }).when(client).execute(eq(TransportCreateIndexAction.TYPE), any(CreateIndexRequest.class), requestCaptor.capture());
 
         ArgumentCaptor<ActionListener> requestCaptor2 = ArgumentCaptor.forClass(ActionListener.class);
         doAnswer(invocation -> {
@@ -117,9 +111,7 @@ public class PutJobStateMachineTests extends ESTestCase {
 
         ActionListener<AcknowledgedResponse> testListener = ActionListener.wrap(response -> {
             fail("Listener success should not have been triggered.");
-        }, e -> {
-            assertThat(e.getCause().getMessage(), equalTo("Ending"));
-        });
+        }, e -> { assertThat(e.getCause().getMessage(), equalTo("Ending")); });
 
         Logger logger = mock(Logger.class);
         Client client = mock(Client.class);
@@ -132,13 +124,13 @@ public class PutJobStateMachineTests extends ESTestCase {
             String mapping = requestCaptor.getValue().mappings();
 
             // Make sure the version is present, and we have our date template (the most important aspects)
-            assertThat(mapping, containsString("\"rollup-version\":\"" + Version.CURRENT.toString() + "\""));
+            assertThat(mapping, containsString("\"rollup-version\":\"\""));
             assertThat(mapping, containsString("\"path_match\":\"*.date_histogram.timestamp\""));
 
             listenerCaptor.getValue().onFailure(new ResourceAlreadyExistsException(job.getConfig().getRollupIndex()));
             latch.countDown();
             return null;
-        }).when(client).execute(eq(CreateIndexAction.INSTANCE), requestCaptor.capture(), listenerCaptor.capture());
+        }).when(client).execute(eq(TransportCreateIndexAction.TYPE), requestCaptor.capture(), listenerCaptor.capture());
 
         ArgumentCaptor<ActionListener> requestCaptor2 = ArgumentCaptor.forClass(ActionListener.class);
         doAnswer(invocation -> {
@@ -185,9 +177,15 @@ public class PutJobStateMachineTests extends ESTestCase {
         ActionListener<AcknowledgedResponse> testListener = ActionListener.wrap(response -> {
             fail("Listener success should not have been triggered.");
         }, e -> {
-            assertThat(e.getMessage(), equalTo("Rollup data cannot be added to existing indices that contain " +
-                "non-rollup data (expected to find _meta key in mapping of rollup index ["
-                + job.getConfig().getRollupIndex() + "] but not found)."));
+            assertThat(
+                e.getMessage(),
+                equalTo(
+                    "Rollup data cannot be added to existing indices that contain "
+                        + "non-rollup data (expected to find _meta key in mapping of rollup index ["
+                        + job.getConfig().getRollupIndex()
+                        + "] but not found)."
+                )
+            );
         });
 
         Logger logger = mock(Logger.class);
@@ -198,10 +196,7 @@ public class PutJobStateMachineTests extends ESTestCase {
             GetMappingsResponse response = mock(GetMappingsResponse.class);
             MappingMetadata meta = new MappingMetadata(RollupField.TYPE_NAME, Collections.emptyMap());
 
-            ImmutableOpenMap.Builder<String, MappingMetadata> builder2 = ImmutableOpenMap.builder(1);
-            builder2.put(job.getConfig().getRollupIndex(), meta);
-
-            when(response.getMappings()).thenReturn(builder2.build());
+            when(response.getMappings()).thenReturn(Map.of(job.getConfig().getRollupIndex(), meta));
             requestCaptor.getValue().onResponse(response);
             return null;
         }).when(client).execute(eq(GetMappingsAction.INSTANCE), any(GetMappingsRequest.class), requestCaptor.capture());
@@ -217,9 +212,15 @@ public class PutJobStateMachineTests extends ESTestCase {
         ActionListener<AcknowledgedResponse> testListener = ActionListener.wrap(response -> {
             fail("Listener success should not have been triggered.");
         }, e -> {
-            assertThat(e.getMessage(), equalTo("Rollup data cannot be added to existing indices that contain " +
-                "non-rollup data (expected to find rollup meta key [_rollup] in mapping of rollup index ["
-                + job.getConfig().getRollupIndex() + "] but not found)."));
+            assertThat(
+                e.getMessage(),
+                equalTo(
+                    "Rollup data cannot be added to existing indices that contain "
+                        + "non-rollup data (expected to find rollup meta key [_rollup] in mapping of rollup index ["
+                        + job.getConfig().getRollupIndex()
+                        + "] but not found)."
+                )
+            );
         });
 
         Logger logger = mock(Logger.class);
@@ -228,51 +229,11 @@ public class PutJobStateMachineTests extends ESTestCase {
         ArgumentCaptor<ActionListener> requestCaptor = ArgumentCaptor.forClass(ActionListener.class);
         doAnswer(invocation -> {
             GetMappingsResponse response = mock(GetMappingsResponse.class);
-            Map<String, Object> m = new HashMap<>(2);
-            m.put("random",
-                Collections.singletonMap(job.getConfig().getId(), job.getConfig()));
-            MappingMetadata meta = new MappingMetadata(RollupField.TYPE_NAME,
-                Collections.singletonMap("_meta", m));
+            Map<String, Object> m = Maps.newMapWithExpectedSize(2);
+            m.put("random", Collections.singletonMap(job.getConfig().getId(), job.getConfig()));
+            MappingMetadata meta = new MappingMetadata(RollupField.TYPE_NAME, Collections.singletonMap("_meta", m));
 
-            ImmutableOpenMap.Builder<String, MappingMetadata> builder2 = ImmutableOpenMap.builder(1);
-            builder2.put(job.getConfig().getRollupIndex(), meta);
-
-            when(response.getMappings()).thenReturn(builder2.build());
-            requestCaptor.getValue().onResponse(response);
-            return null;
-        }).when(client).execute(eq(GetMappingsAction.INSTANCE), any(GetMappingsRequest.class), requestCaptor.capture());
-
-        TransportPutRollupJobAction.updateMapping(job, testListener, mock(PersistentTasksService.class), client, logger);
-        verify(client).execute(eq(GetMappingsAction.INSTANCE), any(GetMappingsRequest.class), any());
-    }
-
-    @SuppressWarnings({ "unchecked", "rawtypes" })
-    public void testNoMappingVersion() {
-        RollupJob job = new RollupJob(ConfigTestHelpers.randomRollupJobConfig(random()), Collections.emptyMap());
-
-        ActionListener<AcknowledgedResponse> testListener = ActionListener.wrap(response -> {
-            fail("Listener success should not have been triggered.");
-        }, e -> {
-            assertThat(e.getMessage(), equalTo("Could not determine version of existing rollup metadata for index ["
-                + job.getConfig().getRollupIndex() + "]"));
-        });
-
-        Logger logger = mock(Logger.class);
-        Client client = mock(Client.class);
-
-        ArgumentCaptor<ActionListener> requestCaptor = ArgumentCaptor.forClass(ActionListener.class);
-        doAnswer(invocation -> {
-            GetMappingsResponse response = mock(GetMappingsResponse.class);
-            Map<String, Object> m = new HashMap<>(2);
-            m.put(RollupField.ROLLUP_META,
-                Collections.singletonMap(job.getConfig().getId(), job.getConfig()));
-            MappingMetadata meta = new MappingMetadata(RollupField.TYPE_NAME,
-                Collections.singletonMap("_meta", m));
-
-            ImmutableOpenMap.Builder<String, MappingMetadata> builder2 = ImmutableOpenMap.builder(1);
-            builder2.put(job.getConfig().getRollupIndex(), meta);
-
-            when(response.getMappings()).thenReturn(builder2.build());
+            when(response.getMappings()).thenReturn(Map.of(job.getConfig().getRollupIndex(), meta));
             requestCaptor.getValue().onResponse(response);
             return null;
         }).when(client).execute(eq(GetMappingsAction.INSTANCE), any(GetMappingsRequest.class), requestCaptor.capture());
@@ -287,9 +248,14 @@ public class PutJobStateMachineTests extends ESTestCase {
 
         ActionListener<AcknowledgedResponse> testListener = ActionListener.wrap(response -> {
             fail("Listener success should not have been triggered.");
-        }, e -> {
-            assertThat(e.getMessage(), equalTo("Cannot create rollup job [foo] because job was previously created (existing metadata)."));
-        });
+        },
+            e -> {
+                assertThat(
+                    e.getMessage(),
+                    equalTo("Cannot create rollup job [foo] because job was previously created (existing metadata).")
+                );
+            }
+        );
 
         Logger logger = mock(Logger.class);
         Client client = mock(Client.class);
@@ -297,17 +263,11 @@ public class PutJobStateMachineTests extends ESTestCase {
         ArgumentCaptor<ActionListener> requestCaptor = ArgumentCaptor.forClass(ActionListener.class);
         doAnswer(invocation -> {
             GetMappingsResponse response = mock(GetMappingsResponse.class);
-            Map<String, Object> m = new HashMap<>(2);
-            m.put(Rollup.ROLLUP_TEMPLATE_VERSION_FIELD, VersionUtils.randomIndexCompatibleVersion(random()));
-            m.put(RollupField.ROLLUP_META,
-                Collections.singletonMap(job.getConfig().getId(), job.getConfig()));
-            MappingMetadata meta = new MappingMetadata(RollupField.TYPE_NAME,
-                Collections.singletonMap("_meta", m));
+            Map<String, Object> m = Maps.newMapWithExpectedSize(2);
+            m.put(RollupField.ROLLUP_META, Collections.singletonMap(job.getConfig().getId(), job.getConfig()));
+            MappingMetadata meta = new MappingMetadata(RollupField.TYPE_NAME, Collections.singletonMap("_meta", m));
 
-            ImmutableOpenMap.Builder<String, MappingMetadata> builder2 = ImmutableOpenMap.builder(1);
-            builder2.put(job.getConfig().getRollupIndex(), meta);
-
-            when(response.getMappings()).thenReturn(builder2.build());
+            when(response.getMappings()).thenReturn(Map.of(job.getConfig().getRollupIndex(), meta));
             requestCaptor.getValue().onResponse(response);
             return null;
         }).when(client).execute(eq(GetMappingsAction.INSTANCE), any(GetMappingsRequest.class), requestCaptor.capture());
@@ -318,17 +278,23 @@ public class PutJobStateMachineTests extends ESTestCase {
 
     @SuppressWarnings({ "unchecked", "rawtypes" })
     public void testAddJobToMapping() {
-        final RollupJobConfig unrelatedJob =
-            ConfigTestHelpers.randomRollupJobConfig(random(), ESTestCase.randomAlphaOfLength(10), "foo", "rollup_index_foo");
+        final RollupJobConfig unrelatedJob = ConfigTestHelpers.randomRollupJobConfig(
+            random(),
+            ESTestCase.randomAlphaOfLength(10),
+            "foo",
+            "rollup_index_foo"
+        );
 
-        final RollupJobConfig config =
-            ConfigTestHelpers.randomRollupJobConfig(random(), ESTestCase.randomAlphaOfLength(10), "foo", "rollup_index_foo");
+        final RollupJobConfig config = ConfigTestHelpers.randomRollupJobConfig(
+            random(),
+            ESTestCase.randomAlphaOfLength(10),
+            "foo",
+            "rollup_index_foo"
+        );
         RollupJob job = new RollupJob(config, Collections.emptyMap());
         ActionListener<AcknowledgedResponse> testListener = ActionListener.wrap(response -> {
             fail("Listener success should not have been triggered.");
-        }, e -> {
-            assertThat(e.getMessage(), equalTo("Ending"));
-        });
+        }, e -> { assertThat(e.getMessage(), equalTo("Ending")); });
 
         Logger logger = mock(Logger.class);
         Client client = mock(Client.class);
@@ -336,17 +302,11 @@ public class PutJobStateMachineTests extends ESTestCase {
         ArgumentCaptor<ActionListener> requestCaptor = ArgumentCaptor.forClass(ActionListener.class);
         doAnswer(invocation -> {
             GetMappingsResponse response = mock(GetMappingsResponse.class);
-            Map<String, Object> m = new HashMap<>(2);
-            m.put(Rollup.ROLLUP_TEMPLATE_VERSION_FIELD, VersionUtils.randomIndexCompatibleVersion(random()));
-            m.put(RollupField.ROLLUP_META,
-                Collections.singletonMap(unrelatedJob.getId(), unrelatedJob));
-            MappingMetadata meta = new MappingMetadata(RollupField.TYPE_NAME,
-                Collections.singletonMap("_meta", m));
+            Map<String, Object> m = Maps.newMapWithExpectedSize(2);
+            m.put(RollupField.ROLLUP_META, Collections.singletonMap(unrelatedJob.getId(), unrelatedJob));
+            MappingMetadata meta = new MappingMetadata(RollupField.TYPE_NAME, Collections.singletonMap("_meta", m));
 
-            ImmutableOpenMap.Builder<String, MappingMetadata> builder2 = ImmutableOpenMap.builder(1);
-            builder2.put(unrelatedJob.getRollupIndex(), meta);
-
-            when(response.getMappings()).thenReturn(builder2.build());
+            when(response.getMappings()).thenReturn(Map.of(unrelatedJob.getRollupIndex(), meta));
             requestCaptor.getValue().onResponse(response);
             return null;
         }).when(client).execute(eq(GetMappingsAction.INSTANCE), any(GetMappingsRequest.class), requestCaptor.capture());
@@ -356,11 +316,11 @@ public class PutJobStateMachineTests extends ESTestCase {
             // Bail here with an error, further testing will happen through tests of #startPersistentTask
             requestCaptor2.getValue().onFailure(new RuntimeException("Ending"));
             return null;
-        }).when(client).execute(eq(PutMappingAction.INSTANCE), any(PutMappingRequest.class), requestCaptor2.capture());
+        }).when(client).execute(eq(TransportPutMappingAction.TYPE), any(PutMappingRequest.class), requestCaptor2.capture());
 
         TransportPutRollupJobAction.updateMapping(job, testListener, mock(PersistentTasksService.class), client, logger);
         verify(client).execute(eq(GetMappingsAction.INSTANCE), any(GetMappingsRequest.class), any());
-        verify(client).execute(eq(PutMappingAction.INSTANCE), any(PutMappingRequest.class), any());
+        verify(client).execute(eq(TransportPutMappingAction.TYPE), any(PutMappingRequest.class), any());
     }
 
     @SuppressWarnings({ "unchecked", "rawtypes" })
@@ -369,9 +329,7 @@ public class PutJobStateMachineTests extends ESTestCase {
 
         ActionListener<AcknowledgedResponse> testListener = ActionListener.wrap(response -> {
             fail("Listener success should not have been triggered.");
-        }, e -> {
-            assertThat(e.getMessage(), equalTo("Cannot create job [foo] because it has already been created (task exists)"));
-        });
+        }, e -> { assertThat(e.getMessage(), equalTo("Cannot create job [foo] because it has already been created (task exists)")); });
 
         PersistentTasksService tasksService = mock(PersistentTasksService.class);
 
@@ -379,11 +337,11 @@ public class PutJobStateMachineTests extends ESTestCase {
         doAnswer(invocation -> {
             requestCaptor.getValue().onFailure(new ResourceAlreadyExistsException(job.getConfig().getRollupIndex()));
             return null;
-        }).when(tasksService).sendStartRequest(eq(job.getConfig().getId()),
-            eq(RollupField.TASK_NAME), eq(job), requestCaptor.capture());
+        }).when(tasksService)
+            .sendStartRequest(eq(job.getConfig().getId()), eq(RollupField.TASK_NAME), eq(job), eq(null), requestCaptor.capture());
 
         TransportPutRollupJobAction.startPersistentTask(job, testListener, tasksService);
-        verify(tasksService).sendStartRequest(eq(job.getConfig().getId()), eq(RollupField.TASK_NAME), eq(job), any());
+        verify(tasksService).sendStartRequest(eq(job.getConfig().getId()), eq(RollupField.TASK_NAME), eq(job), eq(null), any());
     }
 
     @SuppressWarnings({ "unchecked", "rawtypes" })
@@ -392,23 +350,27 @@ public class PutJobStateMachineTests extends ESTestCase {
 
         ActionListener<AcknowledgedResponse> testListener = ActionListener.wrap(response -> {
             fail("Listener success should not have been triggered.");
-        }, e -> {
-            assertThat(e.getMessage(), equalTo("Ending"));
-        });
+        }, e -> { assertThat(e.getMessage(), equalTo("Ending")); });
 
         PersistentTasksService tasksService = mock(PersistentTasksService.class);
 
         ArgumentCaptor<ActionListener> requestCaptor = ArgumentCaptor.forClass(ActionListener.class);
         doAnswer(invocation -> {
-            PersistentTasksCustomMetadata.PersistentTask<RollupJob> response
-                = new PersistentTasksCustomMetadata.PersistentTask<>(job.getConfig().getId(), RollupField.TASK_NAME, job, 123,
-                mock(PersistentTasksCustomMetadata.Assignment.class));
+            PersistentTasksCustomMetadata.PersistentTask<RollupJob> response = new PersistentTasksCustomMetadata.PersistentTask<>(
+                job.getConfig().getId(),
+                RollupField.TASK_NAME,
+                job,
+                123,
+                mock(PersistentTasksCustomMetadata.Assignment.class)
+            );
             requestCaptor.getValue().onResponse(response);
             return null;
-        }).when(tasksService).sendStartRequest(eq(job.getConfig().getId()), eq(RollupField.TASK_NAME), eq(job), requestCaptor.capture());
+        }).when(tasksService)
+            .sendStartRequest(eq(job.getConfig().getId()), eq(RollupField.TASK_NAME), eq(job), eq(null), requestCaptor.capture());
 
-        ArgumentCaptor<PersistentTasksService.WaitForPersistentTaskListener> requestCaptor2
-            = ArgumentCaptor.forClass(PersistentTasksService.WaitForPersistentTaskListener.class);
+        ArgumentCaptor<PersistentTasksService.WaitForPersistentTaskListener> requestCaptor2 = ArgumentCaptor.forClass(
+            PersistentTasksService.WaitForPersistentTaskListener.class
+        );
         doAnswer(invocation -> {
             // Bail here with an error, further testing will happen through tests of #startPersistentTask
             requestCaptor2.getValue().onFailure(new RuntimeException("Ending"));
@@ -416,24 +378,45 @@ public class PutJobStateMachineTests extends ESTestCase {
         }).when(tasksService).waitForPersistentTaskCondition(eq(job.getConfig().getId()), any(), any(), requestCaptor2.capture());
 
         TransportPutRollupJobAction.startPersistentTask(job, testListener, tasksService);
-        verify(tasksService).sendStartRequest(eq(job.getConfig().getId()), eq(RollupField.TASK_NAME), eq(job), any());
+        verify(tasksService).sendStartRequest(eq(job.getConfig().getId()), eq(RollupField.TASK_NAME), eq(job), eq(null), any());
         verify(tasksService).waitForPersistentTaskCondition(eq(job.getConfig().getId()), any(), any(), any());
     }
 
     public void testDeprecatedTimeZone() {
-        GroupConfig groupConfig = new GroupConfig(new DateHistogramGroupConfig("foo", new DateHistogramInterval("1h"), null, "Japan"));
-        RollupJobConfig config = new RollupJobConfig("foo", randomAlphaOfLength(5), "rollup", ConfigTestHelpers.randomCron(),
-            100, groupConfig, Collections.emptyList(), null);
+        GroupConfig groupConfig = new GroupConfig(
+            new DateHistogramGroupConfig.FixedInterval("foo", new DateHistogramInterval("1h"), null, "Japan")
+        );
+        RollupJobConfig config = new RollupJobConfig(
+            "foo",
+            randomAlphaOfLength(5),
+            "rollup",
+            ConfigTestHelpers.randomCron(),
+            100,
+            groupConfig,
+            Collections.emptyList(),
+            null
+        );
         PutRollupJobAction.Request request = new PutRollupJobAction.Request(config);
         TransportPutRollupJobAction.checkForDeprecatedTZ(request);
-        assertWarnings("Creating Rollup job [foo] with timezone [Japan], but [Japan] has been deprecated by the IANA.  " +
-            "Use [Asia/Tokyo] instead.");
+        assertWarnings(
+            "Creating Rollup job [foo] with timezone [Japan], but [Japan] has been deprecated by the IANA.  " + "Use [Asia/Tokyo] instead."
+        );
     }
 
     public void testTimeZone() {
-        GroupConfig groupConfig = new GroupConfig(new DateHistogramGroupConfig("foo", new DateHistogramInterval("1h"), null, "EST"));
-        RollupJobConfig config = new RollupJobConfig("foo", randomAlphaOfLength(5), "rollup", ConfigTestHelpers.randomCron(),
-            100, groupConfig, Collections.emptyList(), null);
+        GroupConfig groupConfig = new GroupConfig(
+            new DateHistogramGroupConfig.FixedInterval("foo", new DateHistogramInterval("1h"), null, "EST")
+        );
+        RollupJobConfig config = new RollupJobConfig(
+            "foo",
+            randomAlphaOfLength(5),
+            "rollup",
+            ConfigTestHelpers.randomCron(),
+            100,
+            groupConfig,
+            Collections.emptyList(),
+            null
+        );
         PutRollupJobAction.Request request = new PutRollupJobAction.Request(config);
         TransportPutRollupJobAction.checkForDeprecatedTZ(request);
     }
