@@ -1,11 +1,11 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.rollup.job;
 
-import org.apache.lucene.search.TotalHits;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.bulk.BulkItemResponse;
 import org.elasticsearch.action.bulk.BulkRequest;
@@ -13,14 +13,10 @@ import org.elasticsearch.action.bulk.BulkResponse;
 import org.elasticsearch.action.search.SearchPhaseExecutionException;
 import org.elasticsearch.action.search.SearchRequest;
 import org.elasticsearch.action.search.SearchResponse;
-import org.elasticsearch.action.search.SearchResponseSections;
 import org.elasticsearch.action.search.ShardSearchFailure;
-import org.elasticsearch.common.xcontent.XContentBuilder;
-import org.elasticsearch.search.SearchHit;
 import org.elasticsearch.search.SearchHits;
-import org.elasticsearch.search.aggregations.Aggregations;
 import org.elasticsearch.search.aggregations.InternalAggregations;
-import org.elasticsearch.search.aggregations.bucket.composite.CompositeAggregation;
+import org.elasticsearch.search.aggregations.bucket.composite.InternalComposite;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.threadpool.TestThreadPool;
 import org.elasticsearch.threadpool.ThreadPool;
@@ -30,9 +26,9 @@ import org.elasticsearch.xpack.core.rollup.RollupField;
 import org.elasticsearch.xpack.core.rollup.job.RollupIndexerJobStats;
 import org.elasticsearch.xpack.core.rollup.job.RollupJob;
 import org.elasticsearch.xpack.core.rollup.job.RollupJobConfig;
+import org.hamcrest.Matchers;
 import org.mockito.stubbing.Answer;
 
-import java.io.IOException;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -45,63 +41,61 @@ import java.util.function.Consumer;
 import java.util.function.Function;
 
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.greaterThanOrEqualTo;
 import static org.hamcrest.Matchers.startsWith;
 import static org.mockito.Mockito.doAnswer;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
-
+import static org.mockito.Mockito.when;
 
 public class RollupIndexerStateTests extends ESTestCase {
     private static class EmptyRollupIndexer extends RollupIndexer {
-        EmptyRollupIndexer(ThreadPool threadPool, String executorName, RollupJob job, AtomicReference<IndexerState> initialState,
-                Map<String, Object> initialPosition, RollupIndexerJobStats stats) {
-            super(threadPool, executorName, job, initialState, initialPosition, stats);
+        EmptyRollupIndexer(
+            ThreadPool threadPool,
+            RollupJob job,
+            AtomicReference<IndexerState> initialState,
+            Map<String, Object> initialPosition,
+            RollupIndexerJobStats stats
+        ) {
+            super(threadPool, job, initialState, initialPosition, stats);
         }
 
-        EmptyRollupIndexer(ThreadPool threadPool, String executorName, RollupJob job, AtomicReference<IndexerState> initialState,
-                           Map<String, Object> initialPosition) {
-            super(threadPool, executorName, job, initialState, initialPosition);
+        EmptyRollupIndexer(
+            ThreadPool threadPool,
+            RollupJob job,
+            AtomicReference<IndexerState> initialState,
+            Map<String, Object> initialPosition
+        ) {
+            super(threadPool, job, initialState, initialPosition);
         }
 
         @Override
         protected void doNextSearch(long waitTimeInNanos, ActionListener<SearchResponse> nextPhase) {
-            // TODO Should use InternalComposite constructor but it is package protected in core.
-            Aggregations aggs = new Aggregations(Collections.singletonList(new CompositeAggregation() {
-                @Override
-                public List<? extends Bucket> getBuckets() {
-                    return Collections.emptyList();
-                }
+            InternalComposite composite = mock(InternalComposite.class);
+            when(composite.getBuckets()).thenReturn(List.of());
+            when(composite.getName()).thenReturn(AGGREGATION_NAME);
 
-                @Override
-                public Map<String, Object> afterKey() {
-                    return null;
-                }
+            InternalAggregations aggs = InternalAggregations.from(List.of(composite));
 
-                @Override
-                public String getName() {
-                    return AGGREGATION_NAME;
-                }
-
-                @Override
-                public String getType() {
-                    return null;
-                }
-
-                @Override
-                public Map<String, Object> getMetadata() {
-                    return null;
-                }
-
-                @Override
-                public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
-                    return null;
-                }
-            }));
-            final SearchResponseSections sections = new SearchResponseSections(
-                new SearchHits(new SearchHit[0], new TotalHits(0, TotalHits.Relation.EQUAL_TO), 0),
-                aggs, null, false, null, null, 1);
-            final SearchResponse response = new SearchResponse(sections, null, 1, 1, 0, 0,
-                new ShardSearchFailure[0], null);
-            nextPhase.onResponse(response);
+            ActionListener.respondAndRelease(
+                nextPhase,
+                new SearchResponse(
+                    SearchHits.EMPTY_WITH_TOTAL_HITS,
+                    aggs,
+                    null,
+                    false,
+                    null,
+                    null,
+                    1,
+                    null,
+                    1,
+                    1,
+                    0,
+                    0,
+                    new ShardSearchFailure[0],
+                    null
+                )
+            );
         }
 
         @Override
@@ -134,14 +128,23 @@ public class RollupIndexerStateTests extends ESTestCase {
     private static class DelayedEmptyRollupIndexer extends EmptyRollupIndexer {
         protected CountDownLatch latch;
 
-        DelayedEmptyRollupIndexer(ThreadPool threadPool, String executorName, RollupJob job, AtomicReference<IndexerState> initialState,
-                                  Map<String, Object> initialPosition) {
-            super(threadPool, executorName, job, initialState, initialPosition);
+        DelayedEmptyRollupIndexer(
+            ThreadPool threadPool,
+            RollupJob job,
+            AtomicReference<IndexerState> initialState,
+            Map<String, Object> initialPosition
+        ) {
+            super(threadPool, job, initialState, initialPosition);
         }
 
-        DelayedEmptyRollupIndexer(ThreadPool threadPool, String executorName, RollupJob job, AtomicReference<IndexerState> initialState,
-                Map<String, Object> initialPosition, RollupIndexerJobStats stats) {
-            super(threadPool, executorName, job, initialState, initialPosition, stats);
+        DelayedEmptyRollupIndexer(
+            ThreadPool threadPool,
+            RollupJob job,
+            AtomicReference<IndexerState> initialState,
+            Map<String, Object> initialPosition,
+            RollupIndexerJobStats stats
+        ) {
+            super(threadPool, job, initialState, initialPosition, stats);
         }
 
         private CountDownLatch newLatch() {
@@ -167,17 +170,17 @@ public class RollupIndexerStateTests extends ESTestCase {
         final BiConsumer<IndexerState, Map<String, Object>> saveStateCheck;
         private CountDownLatch latch;
 
-        NonEmptyRollupIndexer(ThreadPool threadPool, String executorName, RollupJob job, AtomicReference<IndexerState> initialState,
-                              Map<String, Object> initialPosition, Function<SearchRequest, SearchResponse> searchFunction,
-                              Function<BulkRequest, BulkResponse> bulkFunction, Consumer<Exception> failureConsumer) {
-            this(threadPool, executorName, job, initialState, initialPosition, searchFunction, bulkFunction, failureConsumer, (i, m) -> {});
-        }
-
-        NonEmptyRollupIndexer(ThreadPool threadPool, String executorName, RollupJob job, AtomicReference<IndexerState> initialState,
-                              Map<String, Object> initialPosition, Function<SearchRequest, SearchResponse> searchFunction,
-                              Function<BulkRequest, BulkResponse> bulkFunction, Consumer<Exception> failureConsumer,
-                              BiConsumer<IndexerState, Map<String, Object>> saveStateCheck) {
-            super(threadPool, executorName, job, initialState, initialPosition);
+        NonEmptyRollupIndexer(
+            ThreadPool threadPool,
+            RollupJob job,
+            AtomicReference<IndexerState> initialState,
+            Map<String, Object> initialPosition,
+            Function<SearchRequest, SearchResponse> searchFunction,
+            Function<BulkRequest, BulkResponse> bulkFunction,
+            Consumer<Exception> failureConsumer,
+            BiConsumer<IndexerState, Map<String, Object>> saveStateCheck
+        ) {
+            super(threadPool, job, initialState, initialPosition);
             this.searchFunction = searchFunction;
             this.bulkFunction = bulkFunction;
             this.failureConsumer = failureConsumer;
@@ -198,8 +201,7 @@ public class RollupIndexerStateTests extends ESTestCase {
             }
 
             try {
-                SearchResponse response = searchFunction.apply(buildSearchRequest());
-                nextPhase.onResponse(response);
+                ActionListener.respondAndRelease(nextPhase, searchFunction.apply(buildSearchRequest()));
             } catch (Exception e) {
                 nextPhase.onFailure(e);
             }
@@ -244,7 +246,7 @@ public class RollupIndexerStateTests extends ESTestCase {
         AtomicReference<IndexerState> state = new AtomicReference<>(IndexerState.STOPPED);
         final ThreadPool threadPool = new TestThreadPool(getTestName());
         try {
-            RollupIndexer indexer = new EmptyRollupIndexer(threadPool, ThreadPool.Names.GENERIC, job, state, null);
+            RollupIndexer indexer = new EmptyRollupIndexer(threadPool, job, state, null);
             indexer.start();
             assertThat(indexer.getState(), equalTo(IndexerState.STARTED));
             assertTrue(indexer.maybeTriggerAsyncJob(System.currentTimeMillis()));
@@ -267,12 +269,10 @@ public class RollupIndexerStateTests extends ESTestCase {
         final ThreadPool threadPool = new TestThreadPool(getTestName());
         try {
             AtomicBoolean isFinished = new AtomicBoolean(false);
-            DelayedEmptyRollupIndexer indexer = new DelayedEmptyRollupIndexer(threadPool, ThreadPool.Names.GENERIC, job, state, null) {
+            DelayedEmptyRollupIndexer indexer = new DelayedEmptyRollupIndexer(threadPool, job, state, null) {
                 @Override
                 protected void onFinish(ActionListener<Void> listener) {
-                    super.onFinish(ActionListener.wrap(r -> {
-                        listener.onResponse(r);
-                    }, listener::onFailure));
+                    super.onFinish(ActionListener.wrap(r -> { listener.onResponse(r); }, listener::onFailure));
                 }
 
                 @Override
@@ -325,8 +325,7 @@ public class RollupIndexerStateTests extends ESTestCase {
         final ThreadPool threadPool = new TestThreadPool(getTestName());
         try {
             AtomicBoolean isFinished = new AtomicBoolean(false);
-            DelayedEmptyRollupIndexer indexer =
-                new DelayedEmptyRollupIndexer(threadPool, ThreadPool.Names.GENERIC, job, state, null, spyStats) {
+            DelayedEmptyRollupIndexer indexer = new DelayedEmptyRollupIndexer(threadPool, job, state, null, spyStats) {
                 @Override
                 protected void onFinish(ActionListener<Void> listener) {
                     super.onFinish(ActionListener.wrap(r -> {
@@ -357,7 +356,7 @@ public class RollupIndexerStateTests extends ESTestCase {
         final ThreadPool threadPool = new TestThreadPool(getTestName());
         final CountDownLatch latch = new CountDownLatch(1);
         try {
-            EmptyRollupIndexer indexer = new EmptyRollupIndexer(threadPool, ThreadPool.Names.GENERIC, job, state, null) {
+            EmptyRollupIndexer indexer = new EmptyRollupIndexer(threadPool, job, state, null) {
                 @Override
                 protected void onFinish(ActionListener<Void> listener) {
                     fail("Should not have called onFinish");
@@ -403,9 +402,8 @@ public class RollupIndexerStateTests extends ESTestCase {
 
         // Don't use the indexer's latch because we completely change doNextSearch()
         final CountDownLatch doNextSearchLatch = new CountDownLatch(1);
-
         try {
-            DelayedEmptyRollupIndexer indexer = new DelayedEmptyRollupIndexer(threadPool, ThreadPool.Names.GENERIC, job, state, null) {
+            DelayedEmptyRollupIndexer indexer = new DelayedEmptyRollupIndexer(threadPool, job, state, null) {
                 @Override
                 protected void onAbort() {
                     aborted.set(true);
@@ -418,47 +416,37 @@ public class RollupIndexerStateTests extends ESTestCase {
                     } catch (InterruptedException e) {
                         throw new IllegalStateException(e);
                     }
-                    // TODO Should use InternalComposite constructor but it is package protected in core.
-                    Aggregations aggs = new Aggregations(Collections.singletonList(new CompositeAggregation() {
-                        @Override
-                        public List<? extends Bucket> getBuckets() {
-                            // Abort immediately before we are attempting to finish the job because the response
-                            // was empty
-                            state.set(IndexerState.ABORTING);
-                            return Collections.emptyList();
-                        }
 
-                        @Override
-                        public Map<String, Object> afterKey() {
-                            return null;
-                        }
+                    InternalComposite composite = mock(InternalComposite.class);
+                    when(composite.getBuckets()).thenAnswer(invocation -> {
+                        // Abort immediately before we are attempting to finish the job because the response
+                        // was empty
+                        state.set(IndexerState.ABORTING);
+                        return List.of();
+                    });
+                    when(composite.getName()).thenReturn(AGGREGATION_NAME);
 
-                        @Override
-                        public String getName() {
-                            return AGGREGATION_NAME;
-                        }
+                    InternalAggregations aggs = InternalAggregations.from(List.of(composite));
 
-                        @Override
-                        public String getType() {
-                            return null;
-                        }
-
-                        @Override
-                        public Map<String, Object> getMetadata() {
-                            return null;
-                        }
-
-                        @Override
-                        public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
-                            return null;
-                        }
-                    }));
-                    final SearchResponseSections sections = new SearchResponseSections(
-                        new SearchHits(new SearchHit[0], new TotalHits(0, TotalHits.Relation.EQUAL_TO), 0),
-                        aggs, null, false, null, null, 1);
-                    final SearchResponse response = new SearchResponse(sections, null, 1, 1, 0, 0,
-                        ShardSearchFailure.EMPTY_ARRAY, null);
-                    nextPhase.onResponse(response);
+                    ActionListener.respondAndRelease(
+                        nextPhase,
+                        new SearchResponse(
+                            SearchHits.EMPTY_WITH_TOTAL_HITS,
+                            aggs,
+                            null,
+                            false,
+                            null,
+                            null,
+                            1,
+                            null,
+                            1,
+                            1,
+                            0,
+                            0,
+                            ShardSearchFailure.EMPTY_ARRAY,
+                            null
+                        )
+                    );
                 }
 
                 @Override
@@ -487,7 +475,7 @@ public class RollupIndexerStateTests extends ESTestCase {
         AtomicReference<IndexerState> state = new AtomicReference<>(IndexerState.STOPPED);
         final ThreadPool threadPool = new TestThreadPool(getTestName());
         try {
-            DelayedEmptyRollupIndexer indexer = new DelayedEmptyRollupIndexer(threadPool, ThreadPool.Names.GENERIC, job, state, null);
+            DelayedEmptyRollupIndexer indexer = new DelayedEmptyRollupIndexer(threadPool, job, state, null);
             final CountDownLatch latch = indexer.newLatch();
             assertFalse(indexer.maybeTriggerAsyncJob(System.currentTimeMillis()));
             assertThat(indexer.getState(), equalTo(IndexerState.STOPPED));
@@ -510,7 +498,7 @@ public class RollupIndexerStateTests extends ESTestCase {
         final ThreadPool threadPool = new TestThreadPool(getTestName());
         try {
             final AtomicBoolean isAborted = new AtomicBoolean(false);
-            DelayedEmptyRollupIndexer indexer = new DelayedEmptyRollupIndexer(threadPool, ThreadPool.Names.GENERIC, job, state, null) {
+            DelayedEmptyRollupIndexer indexer = new DelayedEmptyRollupIndexer(threadPool, job, state, null) {
                 @Override
                 protected void onAbort() {
                     isAborted.set(true);
@@ -537,7 +525,7 @@ public class RollupIndexerStateTests extends ESTestCase {
         final ThreadPool threadPool = new TestThreadPool(getTestName());
         try {
             final AtomicBoolean isAborted = new AtomicBoolean(false);
-            DelayedEmptyRollupIndexer indexer = new DelayedEmptyRollupIndexer(threadPool, ThreadPool.Names.GENERIC, job, state, null) {
+            DelayedEmptyRollupIndexer indexer = new DelayedEmptyRollupIndexer(threadPool, job, state, null) {
                 @Override
                 protected void onAbort() {
                     isAborted.set(true);
@@ -562,33 +550,29 @@ public class RollupIndexerStateTests extends ESTestCase {
         AtomicReference<IndexerState> state = new AtomicReference<>(IndexerState.STOPPED);
         final ThreadPool threadPool = new TestThreadPool(getTestName());
         try {
-            final AtomicBoolean isAborted = new AtomicBoolean(false);
-            DelayedEmptyRollupIndexer indexer = new DelayedEmptyRollupIndexer(threadPool, ThreadPool.Names.GENERIC, job, state, null) {
-                @Override
-                protected void onAbort() {
-                    isAborted.set(true);
-                }
-            };
+            DelayedEmptyRollupIndexer indexer = new DelayedEmptyRollupIndexer(threadPool, job, state, null);
             indexer.start();
             for (int i = 0; i < 5; i++) {
                 final CountDownLatch latch = indexer.newLatch();
                 assertThat(indexer.getState(), equalTo(IndexerState.STARTED));
-                assertTrue(indexer.maybeTriggerAsyncJob(System.currentTimeMillis()));
+                // This may take more than one attempt due to a cleanup/transition phase
+                // that happens after state change to STARTED (`isJobFinishing`).
+                assertBusy(() -> assertTrue(indexer.maybeTriggerAsyncJob(System.currentTimeMillis())));
                 assertThat(indexer.getState(), equalTo(IndexerState.INDEXING));
                 assertFalse(indexer.maybeTriggerAsyncJob(System.currentTimeMillis()));
                 assertThat(indexer.getState(), equalTo(IndexerState.INDEXING));
                 latch.countDown();
                 assertBusy(() -> assertThat(indexer.getState(), equalTo(IndexerState.STARTED)));
-                assertThat(indexer.getStats().getNumInvocations(), equalTo((long) i + 1));
                 assertThat(indexer.getStats().getNumPages(), equalTo((long) i + 1));
             }
             final CountDownLatch latch = indexer.newLatch();
-            assertTrue(indexer.maybeTriggerAsyncJob(System.currentTimeMillis()));
+            assertBusy(() -> assertTrue(indexer.maybeTriggerAsyncJob(System.currentTimeMillis())));
             assertThat(indexer.stop(), equalTo(IndexerState.STOPPING));
-            assertThat(indexer.getState(), equalTo(IndexerState.STOPPING));
+            assertThat(indexer.getState(), Matchers.either(Matchers.is(IndexerState.STOPPING)).or(Matchers.is(IndexerState.STOPPED)));
             latch.countDown();
             assertBusy(() -> assertThat(indexer.getState(), equalTo(IndexerState.STOPPED)));
             assertTrue(indexer.abort());
+            assertThat(indexer.getStats().getNumInvocations(), greaterThanOrEqualTo(6L));
         } finally {
             ThreadPool.terminate(threadPool, 30, TimeUnit.SECONDS);
         }
@@ -601,76 +585,39 @@ public class RollupIndexerStateTests extends ESTestCase {
         RollupJob job = new RollupJob(ConfigTestHelpers.randomRollupJobConfig(random()), Collections.emptyMap());
         AtomicReference<IndexerState> state = new AtomicReference<>(IndexerState.STOPPED);
         Function<SearchRequest, SearchResponse> searchFunction = searchRequest -> {
-            Aggregations aggs = new Aggregations(Collections.singletonList(new CompositeAggregation() {
-                @Override
-                public List<? extends Bucket> getBuckets() {
-                    Bucket b = new Bucket() {
-                        @Override
-                        public Map<String, Object> getKey() {
-                            return Collections.singletonMap("foo", "bar");
-                        }
 
-                        @Override
-                        public String getKeyAsString() {
-                            return null;
-                        }
+            InternalComposite.InternalBucket bucket = mock(InternalComposite.InternalBucket.class);
+            when(bucket.getKey()).thenReturn(Map.of("foo", "bar"));
+            when(bucket.getDocCount()).thenReturn(1L);
+            when(bucket.getAggregations()).thenReturn(InternalAggregations.EMPTY);
 
-                        @Override
-                        public long getDocCount() {
-                            return 1;
-                        }
+            InternalComposite composite = mock(InternalComposite.class);
+            when(composite.getBuckets()).thenReturn(List.of(bucket));
+            when(composite.getName()).thenReturn(RollupField.NAME);
 
-                        @Override
-                        public Aggregations getAggregations() {
-                            return InternalAggregations.EMPTY;
-                        }
+            InternalAggregations aggs = InternalAggregations.from(List.of(composite));
 
-                        @Override
-                        public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
-                            return null;
-                        }
-                    };
-
-                    return Collections.singletonList(b);
-                }
-
-                @Override
-                public Map<String, Object> afterKey() {
-                    return null;
-                }
-
-                @Override
-                public String getName() {
-                    return RollupField.NAME;
-                }
-
-                @Override
-                public String getType() {
-                    return null;
-                }
-
-                @Override
-                public Map<String, Object> getMetadata() {
-                    return null;
-                }
-
-                @Override
-                public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
-                    return null;
-                }
-            }));
-            final SearchResponseSections sections = new SearchResponseSections(
-                new SearchHits(new SearchHit[0], new TotalHits(0, TotalHits.Relation.EQUAL_TO), 0),
-                aggs, null, false, null, null, 1);
-            return new SearchResponse(sections, null, 1, 1, 0, 0,
-                ShardSearchFailure.EMPTY_ARRAY, null);
+            return new SearchResponse(
+                SearchHits.EMPTY_WITH_TOTAL_HITS,
+                aggs,
+                null,
+                false,
+                null,
+                null,
+                1,
+                null,
+                1,
+                1,
+                0,
+                0,
+                ShardSearchFailure.EMPTY_ARRAY,
+                null
+            );
         };
 
         Function<BulkRequest, BulkResponse> bulkFunction = bulkRequest -> new BulkResponse(new BulkItemResponse[0], 100);
 
-        Consumer<Exception> failureConsumer = e -> {
-            assertThat(e.getMessage(), equalTo("Could not identify key in agg [foo]"));
-        };
+        Consumer<Exception> failureConsumer = e -> { assertThat(e.getMessage(), equalTo("Could not identify key in agg [foo]")); };
         BiConsumer<IndexerState, Map<String, Object>> stateCheck = (i, p) -> {
             if (i == IndexerState.STARTED) {
                 isFinished.set(true);
@@ -680,8 +627,16 @@ public class RollupIndexerStateTests extends ESTestCase {
         final ThreadPool threadPool = new TestThreadPool(getTestName());
         try {
 
-            NonEmptyRollupIndexer indexer = new NonEmptyRollupIndexer(threadPool, ThreadPool.Names.GENERIC, job, state, null,
-                searchFunction, bulkFunction, failureConsumer, stateCheck);
+            NonEmptyRollupIndexer indexer = new NonEmptyRollupIndexer(
+                threadPool,
+                job,
+                state,
+                null,
+                searchFunction,
+                bulkFunction,
+                failureConsumer,
+                stateCheck
+            );
             final CountDownLatch latch = indexer.newLatch(1);
             indexer.start();
             assertThat(indexer.getState(), equalTo(IndexerState.STARTED));
@@ -713,87 +668,56 @@ public class RollupIndexerStateTests extends ESTestCase {
         RollupJob job = new RollupJob(ConfigTestHelpers.randomRollupJobConfig(random()), Collections.emptyMap());
         AtomicReference<IndexerState> state = new AtomicReference<>(IndexerState.STOPPED);
         Function<SearchRequest, SearchResponse> searchFunction = searchRequest -> {
-            Aggregations aggs = new Aggregations(Collections.singletonList(new CompositeAggregation() {
-                @Override
-                public List<? extends Bucket> getBuckets() {
-                    Bucket b = new Bucket() {
-                        @Override
-                        public Map<String, Object> getKey() {
-                            state.set(IndexerState.STOPPING); // <- Force a stop so we can see how error + non-INDEXING state is handled
-                            return Collections.singletonMap("foo", "bar");  // This will throw an exception
-                        }
 
-                        @Override
-                        public String getKeyAsString() {
-                            return null;
-                        }
+            InternalComposite.InternalBucket bucket = mock(InternalComposite.InternalBucket.class);
+            when(bucket.getKey()).thenAnswer(invocation -> {
+                state.set(IndexerState.STOPPING); // <- Force a stop so we can see how error + non-INDEXING state is handled
+                return Collections.singletonMap("foo", "bar");  // This will throw an exception
+            });
+            when(bucket.getDocCount()).thenReturn(1L);
+            when(bucket.getAggregations()).thenReturn(InternalAggregations.EMPTY);
 
-                        @Override
-                        public long getDocCount() {
-                            return 1;
-                        }
+            InternalComposite composite = mock(InternalComposite.class);
+            when(composite.getBuckets()).thenReturn(List.of(bucket));
+            when(composite.getName()).thenReturn(RollupField.NAME);
 
-                        @Override
-                        public Aggregations getAggregations() {
-                            return InternalAggregations.EMPTY;
-                        }
-
-                        @Override
-                        public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
-                            return null;
-                        }
-                    };
-
-                    return Collections.singletonList(b);
-                }
-
-                @Override
-                public Map<String, Object> afterKey() {
-                    return null;
-                }
-
-                @Override
-                public String getName() {
-                    return RollupField.NAME;
-                }
-
-                @Override
-                public String getType() {
-                    return null;
-                }
-
-                @Override
-                public Map<String, Object> getMetadata() {
-                    return null;
-                }
-
-                @Override
-                public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
-                    return null;
-                }
-            }));
-            final SearchResponseSections sections = new SearchResponseSections(
-                new SearchHits(new SearchHit[0], new TotalHits(0, TotalHits.Relation.EQUAL_TO), 0),
-                aggs, null, false, null, null, 1);
-            return new SearchResponse(sections, null, 1, 1, 0, 0,
-                ShardSearchFailure.EMPTY_ARRAY, null);
+            InternalAggregations aggs = InternalAggregations.from(List.of(composite));
+            return new SearchResponse(
+                SearchHits.EMPTY_WITH_TOTAL_HITS,
+                aggs,
+                null,
+                false,
+                null,
+                null,
+                1,
+                null,
+                1,
+                1,
+                0,
+                0,
+                ShardSearchFailure.EMPTY_ARRAY,
+                null
+            );
         };
 
         Function<BulkRequest, BulkResponse> bulkFunction = bulkRequest -> new BulkResponse(new BulkItemResponse[0], 100);
 
-        Consumer<Exception> failureConsumer = e -> {
-            assertThat(e.getMessage(), equalTo("Could not identify key in agg [foo]"));
-        };
+        Consumer<Exception> failureConsumer = e -> { assertThat(e.getMessage(), equalTo("Could not identify key in agg [foo]")); };
 
-        BiConsumer<IndexerState, Map<String, Object>> doSaveStateCheck = (indexerState, position) -> {
-            isFinished.set(true);
-        };
+        BiConsumer<IndexerState, Map<String, Object>> doSaveStateCheck = (indexerState, position) -> { isFinished.set(true); };
 
         final ThreadPool threadPool = new TestThreadPool(getTestName());
         try {
-
-            NonEmptyRollupIndexer indexer = new NonEmptyRollupIndexer(threadPool, ThreadPool.Names.GENERIC, job, state, null,
-                searchFunction, bulkFunction, failureConsumer, doSaveStateCheck);
+            NonEmptyRollupIndexer indexer = new NonEmptyRollupIndexer(
+                threadPool,
+                job,
+                state,
+                null,
+                searchFunction,
+                bulkFunction,
+                failureConsumer,
+                doSaveStateCheck
+            );
             final CountDownLatch latch = indexer.newLatch(1);
             indexer.start();
             assertThat(indexer.getState(), equalTo(IndexerState.STARTED));
@@ -822,15 +746,16 @@ public class RollupIndexerStateTests extends ESTestCase {
         RollupJob job = new RollupJob(ConfigTestHelpers.randomRollupJobConfig(random()), Collections.emptyMap());
         AtomicReference<IndexerState> state = new AtomicReference<>(IndexerState.STOPPED);
         Function<SearchRequest, SearchResponse> searchFunction = searchRequest -> {
-            throw new SearchPhaseExecutionException("query", "Partial shards failure",
-                    new ShardSearchFailure[] { new ShardSearchFailure(new RuntimeException("failed")) });
+            throw new SearchPhaseExecutionException(
+                "query",
+                "Partial shards failure",
+                new ShardSearchFailure[] { new ShardSearchFailure(new RuntimeException("failed")) }
+            );
         };
 
         Function<BulkRequest, BulkResponse> bulkFunction = bulkRequest -> new BulkResponse(new BulkItemResponse[0], 100);
 
-        Consumer<Exception> failureConsumer = e -> {
-            assertThat(e.getMessage(), startsWith("Partial shards failure"));
-        };
+        Consumer<Exception> failureConsumer = e -> { assertThat(e.getMessage(), startsWith("Partial shards failure")); };
         BiConsumer<IndexerState, Map<String, Object>> stateCheck = (i, p) -> {
             if (i == IndexerState.STARTED) {
                 isFinished.set(true);
@@ -839,9 +764,16 @@ public class RollupIndexerStateTests extends ESTestCase {
 
         final ThreadPool threadPool = new TestThreadPool(getTestName());
         try {
-
-            NonEmptyRollupIndexer indexer = new NonEmptyRollupIndexer(threadPool, ThreadPool.Names.GENERIC, job, state, null,
-                searchFunction, bulkFunction, failureConsumer, stateCheck);
+            NonEmptyRollupIndexer indexer = new NonEmptyRollupIndexer(
+                threadPool,
+                job,
+                state,
+                null,
+                searchFunction,
+                bulkFunction,
+                failureConsumer,
+                stateCheck
+            );
             final CountDownLatch latch = indexer.newLatch(1);
             indexer.start();
             assertThat(indexer.getState(), equalTo(IndexerState.STARTED));
@@ -871,69 +803,34 @@ public class RollupIndexerStateTests extends ESTestCase {
         RollupJob job = new RollupJob(ConfigTestHelpers.randomRollupJobConfig(random()), Collections.emptyMap());
         AtomicReference<IndexerState> state = new AtomicReference<>(IndexerState.STOPPED);
         Function<SearchRequest, SearchResponse> searchFunction = searchRequest -> {
-            Aggregations aggs = new Aggregations(Collections.singletonList(new CompositeAggregation() {
-                @Override
-                public List<? extends Bucket> getBuckets() {
-                    Bucket b = new Bucket() {
-                        @Override
-                        public Map<String, Object> getKey() {
-                            return Collections.singletonMap("foo.terms", "bar");
-                        }
 
-                        @Override
-                        public String getKeyAsString() {
-                            return null;
-                        }
+            InternalComposite.InternalBucket bucket = mock(InternalComposite.InternalBucket.class);
+            when(bucket.getKey()).thenReturn(Map.of("foo.terms", "bar"));
+            when(bucket.getDocCount()).thenReturn(1L);
+            when(bucket.getAggregations()).thenReturn(InternalAggregations.EMPTY);
 
-                        @Override
-                        public long getDocCount() {
-                            return 1;
-                        }
+            InternalComposite composite = mock(InternalComposite.class);
+            when(composite.getName()).thenReturn(RollupField.NAME);
+            when(composite.getBuckets()).thenReturn(List.of(bucket));
 
-                        @Override
-                        public Aggregations getAggregations() {
-                            return InternalAggregations.EMPTY;
-                        }
+            InternalAggregations aggs = InternalAggregations.from(List.of(composite));
 
-                        @Override
-                        public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
-                            return null;
-                        }
-                    };
-
-                    return Collections.singletonList(b);
-                }
-
-                @Override
-                public Map<String, Object> afterKey() {
-                    return null;
-                }
-
-                @Override
-                public String getName() {
-                    return RollupField.NAME;
-                }
-
-                @Override
-                public String getType() {
-                    return null;
-                }
-
-                @Override
-                public Map<String, Object> getMetadata() {
-                    return null;
-                }
-
-                @Override
-                public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
-                    return null;
-                }
-            }));
-            final SearchResponseSections sections = new SearchResponseSections(
-                new SearchHits(new SearchHit[0], new TotalHits(0, TotalHits.Relation.EQUAL_TO), 0),
-                aggs, null, false, null, null, 1);
-            return new SearchResponse(sections, null, 1, 1, 0, 0,
-                ShardSearchFailure.EMPTY_ARRAY, null);
+            return new SearchResponse(
+                SearchHits.EMPTY_WITH_TOTAL_HITS,
+                aggs,
+                null,
+                false,
+                null,
+                null,
+                1,
+                null,
+                1,
+                1,
+                0,
+                0,
+                ShardSearchFailure.EMPTY_ARRAY,
+                null
+            );
         };
 
         Function<BulkRequest, BulkResponse> bulkFunction = bulkRequest -> {
@@ -941,9 +838,7 @@ public class RollupIndexerStateTests extends ESTestCase {
             return null;
         };
 
-        Consumer<Exception> failureConsumer = e -> {
-            assertThat(e.getMessage(), equalTo("failed"));
-        };
+        Consumer<Exception> failureConsumer = e -> { assertThat(e.getMessage(), equalTo("failed")); };
         BiConsumer<IndexerState, Map<String, Object>> stateCheck = (i, p) -> {
             if (i == IndexerState.STARTED) {
                 isFinished.set(true);
@@ -953,8 +848,16 @@ public class RollupIndexerStateTests extends ESTestCase {
         final ThreadPool threadPool = new TestThreadPool(getTestName());
         try {
 
-            NonEmptyRollupIndexer indexer = new NonEmptyRollupIndexer(threadPool, ThreadPool.Names.GENERIC, job, state, null,
-                searchFunction, bulkFunction, failureConsumer, stateCheck) {
+            NonEmptyRollupIndexer indexer = new NonEmptyRollupIndexer(
+                threadPool,
+                job,
+                state,
+                null,
+                searchFunction,
+                bulkFunction,
+                failureConsumer,
+                stateCheck
+            ) {
                 @Override
                 protected void doNextBulk(BulkRequest request, ActionListener<BulkResponse> nextPhase) {
                     nextPhase.onFailure(new RuntimeException("failed"));
