@@ -1,14 +1,18 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.security.authc;
 
 import org.elasticsearch.bootstrap.BootstrapCheck;
+import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.set.Sets;
+import org.elasticsearch.core.Nullable;
 import org.elasticsearch.env.Environment;
+import org.elasticsearch.license.LicensedFeature;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.watcher.ResourceWatcherService;
 import org.elasticsearch.xpack.core.security.authc.Realm;
@@ -16,32 +20,34 @@ import org.elasticsearch.xpack.core.security.authc.RealmConfig;
 import org.elasticsearch.xpack.core.security.authc.RealmSettings;
 import org.elasticsearch.xpack.core.security.authc.esnative.NativeRealmSettings;
 import org.elasticsearch.xpack.core.security.authc.file.FileRealmSettings;
+import org.elasticsearch.xpack.core.security.authc.jwt.JwtRealmSettings;
 import org.elasticsearch.xpack.core.security.authc.kerberos.KerberosRealmSettings;
 import org.elasticsearch.xpack.core.security.authc.ldap.LdapRealmSettings;
 import org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings;
 import org.elasticsearch.xpack.core.security.authc.pki.PkiRealmSettings;
 import org.elasticsearch.xpack.core.security.authc.saml.SamlRealmSettings;
+import org.elasticsearch.xpack.core.security.authc.support.UserRoleMapper;
 import org.elasticsearch.xpack.core.ssl.SSLService;
+import org.elasticsearch.xpack.security.Security;
 import org.elasticsearch.xpack.security.authc.esnative.NativeRealm;
 import org.elasticsearch.xpack.security.authc.esnative.NativeUsersStore;
 import org.elasticsearch.xpack.security.authc.esnative.ReservedRealm;
 import org.elasticsearch.xpack.security.authc.file.FileRealm;
+import org.elasticsearch.xpack.security.authc.jwt.JwtRealm;
 import org.elasticsearch.xpack.security.authc.kerberos.KerberosRealm;
 import org.elasticsearch.xpack.security.authc.ldap.LdapRealm;
 import org.elasticsearch.xpack.security.authc.oidc.OpenIdConnectRealm;
 import org.elasticsearch.xpack.security.authc.pki.PkiRealm;
 import org.elasticsearch.xpack.security.authc.saml.SamlRealm;
 import org.elasticsearch.xpack.security.authc.support.RoleMappingFileBootstrapCheck;
-import org.elasticsearch.xpack.security.authc.support.mapper.NativeRoleMappingStore;
 import org.elasticsearch.xpack.security.support.SecurityIndexManager;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Provides a single entry point into dealing with all standard XPack security {@link Realm realms}.
@@ -51,43 +57,69 @@ import java.util.stream.Collectors;
  */
 public final class InternalRealms {
 
-    /**
-     * The list of all <em>internal</em> realm types, excluding {@link ReservedRealm#TYPE}.
-     */
-    private static final Set<String> XPACK_TYPES = Collections
-        .unmodifiableSet(Sets.newHashSet(NativeRealmSettings.TYPE, FileRealmSettings.TYPE, LdapRealmSettings.AD_TYPE,
-            LdapRealmSettings.LDAP_TYPE, PkiRealmSettings.TYPE, SamlRealmSettings.TYPE, KerberosRealmSettings.TYPE,
-            OpenIdConnectRealmSettings.TYPE));
+    static final String RESERVED_TYPE = ReservedRealm.TYPE;
+    static final String NATIVE_TYPE = NativeRealmSettings.TYPE;
+    static final String FILE_TYPE = FileRealmSettings.TYPE;
+    static final String LDAP_TYPE = LdapRealmSettings.LDAP_TYPE;
+    static final String AD_TYPE = LdapRealmSettings.AD_TYPE;
+    static final String PKI_TYPE = PkiRealmSettings.TYPE;
+    static final String SAML_TYPE = SamlRealmSettings.TYPE;
+    static final String OIDC_TYPE = OpenIdConnectRealmSettings.TYPE;
+    static final String JWT_TYPE = JwtRealmSettings.TYPE;
+    static final String KERBEROS_TYPE = KerberosRealmSettings.TYPE;
+
+    private static final Set<String> BUILTIN_TYPES = Set.of(NATIVE_TYPE, FILE_TYPE);
 
     /**
-     * The list of all standard realm types, which are those provided by x-pack and do not have extensive
-     * interaction with third party sources
+     * The map of all <em>licensed</em> internal realm types to their licensed feature
      */
-    private static final Set<String> STANDARD_TYPES = Collections.unmodifiableSet(Sets.newHashSet(NativeRealmSettings.TYPE,
-        FileRealmSettings.TYPE, LdapRealmSettings.AD_TYPE, LdapRealmSettings.LDAP_TYPE, PkiRealmSettings.TYPE));
-
-    /**
-     * Determines whether <code>type</code> is an internal realm-type that is provided by x-pack,
-     * including the {@link ReservedRealm}
-     */
-    static boolean isXPackRealm(String type) {
-        if (XPACK_TYPES.contains(type)) {
-            return true;
-        }
-        return ReservedRealm.TYPE.equals(type);
+    private static final Map<String, LicensedFeature.Persistent> LICENSED_REALMS;
+    static {
+        Map<String, LicensedFeature.Persistent> realms = new HashMap<>();
+        realms.put(AD_TYPE, Security.AD_REALM_FEATURE);
+        realms.put(LDAP_TYPE, Security.LDAP_REALM_FEATURE);
+        realms.put(PKI_TYPE, Security.PKI_REALM_FEATURE);
+        realms.put(SAML_TYPE, Security.SAML_REALM_FEATURE);
+        realms.put(KERBEROS_TYPE, Security.KERBEROS_REALM_FEATURE);
+        realms.put(OIDC_TYPE, Security.OIDC_REALM_FEATURE);
+        realms.put(JWT_TYPE, Security.JWT_REALM_FEATURE);
+        LICENSED_REALMS = Map.copyOf(realms);
     }
 
+    /**
+     * The set of all <em>internal</em> realm types, excluding {@link ReservedRealm#TYPE}
+     * @deprecated Use of this method (other than in tests) is discouraged.
+     */
+    @Deprecated
     public static Collection<String> getConfigurableRealmsTypes() {
-        return Collections.unmodifiableSet(XPACK_TYPES);
+        return Set.copyOf(Sets.union(BUILTIN_TYPES, LICENSED_REALMS.keySet()));
+    }
+
+    static boolean isInternalRealm(String type) {
+        return RESERVED_TYPE.equals(type) || BUILTIN_TYPES.contains(type) || LICENSED_REALMS.containsKey(type);
+    }
+
+    static boolean isBuiltinRealm(String type) {
+        return BUILTIN_TYPES.contains(type);
     }
 
     /**
-     * Determines whether <code>type</code> is an internal realm-type that is provided by x-pack,
-     * excluding the {@link ReservedRealm} and realms that have extensive interaction with
-     * third party sources
+     * @return The licensed feature for the given realm type, or {@code null} if the realm does not require a specific license type
+     * @throws IllegalArgumentException if the provided type is not an {@link #isInternalRealm(String) internal realm}
      */
-    static boolean isStandardRealm(String type) {
-        return STANDARD_TYPES.contains(type);
+    @Nullable
+    static LicensedFeature.Persistent getLicensedFeature(String type) {
+        if (Strings.isNullOrEmpty(type)) {
+            throw new IllegalArgumentException("Empty realm type [" + type + "]");
+        }
+        if (type.equals(RESERVED_TYPE) || isBuiltinRealm(type)) {
+            return null;
+        }
+        final LicensedFeature.Persistent feature = LICENSED_REALMS.get(type);
+        if (feature == null) {
+            throw new IllegalArgumentException("Unsupported realm type [" + type + "]");
+        }
+        return feature;
     }
 
     /**
@@ -96,54 +128,79 @@ public final class InternalRealms {
      *
      * @return A map from <em>realm-type</em> to <code>Factory</code>
      */
-    public static Map<String, Realm.Factory> getFactories(ThreadPool threadPool, ResourceWatcherService resourceWatcherService,
-                                                          SSLService sslService, NativeUsersStore nativeUsersStore,
-                                                          NativeRoleMappingStore nativeRoleMappingStore,
-                                                          SecurityIndexManager securityIndex) {
-
+    public static Map<String, Realm.Factory> getFactories(
+        ThreadPool threadPool,
+        Settings settings,
+        ResourceWatcherService resourceWatcherService,
+        SSLService sslService,
+        NativeUsersStore nativeUsersStore,
+        UserRoleMapper userRoleMapper,
+        SecurityIndexManager securityIndex
+    ) {
         return Map.of(
-                // file realm
-                FileRealmSettings.TYPE,
-                config -> new FileRealm(config, resourceWatcherService, threadPool),
-                // native realm
-                NativeRealmSettings.TYPE,
-                config -> {
-                    final NativeRealm nativeRealm = new NativeRealm(config, nativeUsersStore, threadPool);
-                    securityIndex.addIndexStateListener(nativeRealm::onSecurityIndexStateChange);
-                    return nativeRealm;
-                },
-                // active directory realm
-                LdapRealmSettings.AD_TYPE,
-                config -> new LdapRealm(config, sslService, resourceWatcherService, nativeRoleMappingStore, threadPool),
-                // LDAP realm
-                LdapRealmSettings.LDAP_TYPE,
-                config -> new LdapRealm(config, sslService, resourceWatcherService, nativeRoleMappingStore, threadPool),
-                // PKI realm
-                PkiRealmSettings.TYPE,
-                config -> new PkiRealm(config, resourceWatcherService, nativeRoleMappingStore),
-                // SAML realm
-                SamlRealmSettings.TYPE,
-                config -> SamlRealm.create(config, sslService, resourceWatcherService, nativeRoleMappingStore),
-                // Kerberos realm
-                KerberosRealmSettings.TYPE,
-                config -> new KerberosRealm(config, nativeRoleMappingStore, threadPool),
-                // OpenID Connect realm
-                OpenIdConnectRealmSettings.TYPE,
-                config -> new OpenIdConnectRealm(config, sslService, nativeRoleMappingStore, resourceWatcherService));
+            // file realm
+            FileRealmSettings.TYPE,
+            config -> new FileRealm(config, resourceWatcherService, threadPool),
+            // native realm
+            NativeRealmSettings.TYPE,
+            config -> buildNativeRealm(threadPool, settings, nativeUsersStore, securityIndex, config),
+            // active directory realm
+            LdapRealmSettings.AD_TYPE,
+            config -> new LdapRealm(config, sslService, resourceWatcherService, userRoleMapper, threadPool),
+            // LDAP realm
+            LdapRealmSettings.LDAP_TYPE,
+            config -> new LdapRealm(config, sslService, resourceWatcherService, userRoleMapper, threadPool),
+            // PKI realm
+            PkiRealmSettings.TYPE,
+            config -> new PkiRealm(config, resourceWatcherService, userRoleMapper),
+            // SAML realm
+            SamlRealmSettings.TYPE,
+            config -> SamlRealm.create(config, sslService, resourceWatcherService, userRoleMapper),
+            // Kerberos realm
+            KerberosRealmSettings.TYPE,
+            config -> new KerberosRealm(config, userRoleMapper, threadPool),
+            // OpenID Connect realm
+            OpenIdConnectRealmSettings.TYPE,
+            config -> new OpenIdConnectRealm(config, sslService, userRoleMapper, resourceWatcherService),
+            // JWT realm
+            JwtRealmSettings.TYPE,
+            config -> new JwtRealm(config, sslService, userRoleMapper)
+        );
     }
 
-    private InternalRealms() {
+    private static NativeRealm buildNativeRealm(
+        ThreadPool threadPool,
+        Settings settings,
+        NativeUsersStore nativeUsersStore,
+        SecurityIndexManager securityIndex,
+        RealmConfig config
+    ) {
+        if (settings.getAsBoolean(NativeRealmSettings.NATIVE_USERS_ENABLED, true) == false) {
+            throw new IllegalArgumentException(
+                "Cannot configure a ["
+                    + NativeRealmSettings.TYPE
+                    + "] realm when ["
+                    + NativeRealmSettings.NATIVE_USERS_ENABLED
+                    + "] is false"
+            );
+        }
+        final NativeRealm nativeRealm = new NativeRealm(config, nativeUsersStore, threadPool);
+        securityIndex.addStateListener(nativeRealm::onSecurityIndexStateChange);
+        return nativeRealm;
     }
+
+    private InternalRealms() {}
 
     public static List<BootstrapCheck> getBootstrapChecks(final Settings globalSettings, final Environment env) {
         final Set<String> realmTypes = Sets.newHashSet(LdapRealmSettings.AD_TYPE, LdapRealmSettings.LDAP_TYPE, PkiRealmSettings.TYPE);
-        final List<BootstrapCheck> checks = RealmSettings.getRealmSettings(globalSettings)
-            .keySet().stream()
+        return RealmSettings.getRealmSettings(globalSettings)
+            .keySet()
+            .stream()
             .filter(id -> realmTypes.contains(id.getType()))
             .map(id -> new RealmConfig(id, globalSettings, env, null))
             .map(RoleMappingFileBootstrapCheck::create)
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
-        return checks;
+            .toList();
     }
+
 }
