@@ -1,20 +1,22 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.security.rest.action;
 
-import org.elasticsearch.client.node.NodeClient;
+import org.elasticsearch.client.internal.node.NodeClient;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.xcontent.ToXContent;
-import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.license.XPackLicenseState;
-import org.elasticsearch.rest.BytesRestResponse;
 import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.rest.RestResponse;
 import org.elasticsearch.rest.RestStatus;
+import org.elasticsearch.rest.Scope;
+import org.elasticsearch.rest.ServerlessScope;
 import org.elasticsearch.rest.action.RestBuilderListener;
+import org.elasticsearch.xcontent.ToXContent;
+import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xpack.core.security.SecurityContext;
 import org.elasticsearch.xpack.core.security.action.user.AuthenticateAction;
 import org.elasticsearch.xpack.core.security.action.user.AuthenticateRequest;
@@ -22,11 +24,11 @@ import org.elasticsearch.xpack.core.security.action.user.AuthenticateResponse;
 import org.elasticsearch.xpack.core.security.user.User;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.rest.RestRequest.Method.GET;
 
+@ServerlessScope(Scope.PUBLIC)
 public class RestAuthenticateAction extends SecurityBaseRestHandler {
 
     private final SecurityContext securityContext;
@@ -38,14 +40,7 @@ public class RestAuthenticateAction extends SecurityBaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.emptyList();
-    }
-
-    @Override
-    public List<ReplacedRoute> replacedRoutes() {
-        // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.singletonList(new ReplacedRoute(GET, "/_security/_authenticate", GET,
-            "/_xpack/security/_authenticate"));
+        return List.of(new Route(GET, "/_security/_authenticate"));
     }
 
     @Override
@@ -59,16 +54,16 @@ public class RestAuthenticateAction extends SecurityBaseRestHandler {
         if (user == null) {
             return restChannel -> { throw new IllegalStateException("we should never have a null user and invoke this consumer"); };
         }
-        final String username = user.principal();
-
-        return channel -> client.execute(AuthenticateAction.INSTANCE, new AuthenticateRequest(username),
-                new RestBuilderListener<AuthenticateResponse>(channel) {
-            @Override
-            public RestResponse buildResponse(AuthenticateResponse authenticateResponse, XContentBuilder builder) throws Exception {
-                authenticateResponse.authentication().toXContent(builder, ToXContent.EMPTY_PARAMS);
-                return new BytesRestResponse(RestStatus.OK, builder);
+        return channel -> client.execute(
+            AuthenticateAction.INSTANCE,
+            AuthenticateRequest.INSTANCE,
+            new RestBuilderListener<AuthenticateResponse>(channel) {
+                @Override
+                public RestResponse buildResponse(AuthenticateResponse authenticateResponse, XContentBuilder builder) throws Exception {
+                    authenticateResponse.toXContent(builder, ToXContent.EMPTY_PARAMS);
+                    return new RestResponse(RestStatus.OK, builder);
+                }
             }
-        });
-
+        );
     }
 }
