@@ -1,25 +1,28 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.security.rest.action.rolemapping;
 
-import org.elasticsearch.client.node.NodeClient;
+import org.elasticsearch.client.internal.node.NodeClient;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.xcontent.XContentBuilder;
+import org.elasticsearch.common.xcontent.LoggingDeprecationHandler;
+import org.elasticsearch.common.xcontent.XContentHelper;
 import org.elasticsearch.license.XPackLicenseState;
-import org.elasticsearch.rest.BytesRestResponse;
 import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.rest.RestResponse;
 import org.elasticsearch.rest.RestStatus;
+import org.elasticsearch.rest.Scope;
+import org.elasticsearch.rest.ServerlessScope;
 import org.elasticsearch.rest.action.RestBuilderListener;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xpack.core.security.action.rolemapping.PutRoleMappingRequestBuilder;
 import org.elasticsearch.xpack.core.security.action.rolemapping.PutRoleMappingResponse;
-import org.elasticsearch.xpack.security.rest.action.SecurityBaseRestHandler;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.rest.RestRequest.Method.POST;
@@ -30,7 +33,8 @@ import static org.elasticsearch.rest.RestRequest.Method.PUT;
  *
  * @see org.elasticsearch.xpack.security.authc.support.mapper.NativeRoleMappingStore
  */
-public class RestPutRoleMappingAction extends SecurityBaseRestHandler {
+@ServerlessScope(Scope.INTERNAL)
+public class RestPutRoleMappingAction extends NativeRoleMappingBaseRestHandler {
 
     public RestPutRoleMappingAction(Settings settings, XPackLicenseState licenseState) {
         super(settings, licenseState);
@@ -38,16 +42,7 @@ public class RestPutRoleMappingAction extends SecurityBaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.emptyList();
-    }
-
-    @Override
-    public List<ReplacedRoute> replacedRoutes() {
-        // TODO: remove deprecated endpoint in 8.0.0
-        return List.of(
-            new ReplacedRoute(POST, "/_security/role_mapping/{name}", POST, "/_xpack/security/role_mapping/{name}"),
-            new ReplacedRoute(PUT, "/_security/role_mapping/{name}", PUT, "/_xpack/security/role_mapping/{name}")
-        );
+        return List.of(new Route(POST, "/_security/role_mapping/{name}"), new Route(PUT, "/_security/role_mapping/{name}"));
     }
 
     @Override
@@ -57,16 +52,23 @@ public class RestPutRoleMappingAction extends SecurityBaseRestHandler {
 
     @Override
     public RestChannelConsumer innerPrepareRequest(RestRequest request, NodeClient client) throws IOException {
-        final String name = request.param("name");
-        PutRoleMappingRequestBuilder requestBuilder = new PutRoleMappingRequestBuilder(client)
-            .source(name, request.requiredContent(), request.getXContentType())
-            .setRefreshPolicy(request.param("refresh"));
-        return channel -> requestBuilder.execute(
-                new RestBuilderListener<>(channel) {
-                    @Override
-                    public RestResponse buildResponse(PutRoleMappingResponse response, XContentBuilder builder) throws Exception {
-                        return new BytesRestResponse(RestStatus.OK, builder.startObject().field("role_mapping", response).endObject());
-                    }
-                });
+        String name = request.param("name");
+        String refresh = request.param("refresh");
+        PutRoleMappingRequestBuilder requestBuilder;
+        try (
+            XContentParser parser = XContentHelper.createParserNotCompressed(
+                LoggingDeprecationHandler.XCONTENT_PARSER_CONFIG,
+                request.requiredContent(),
+                request.getXContentType()
+            )
+        ) {
+            requestBuilder = new PutRoleMappingRequestBuilder(client).source(name, parser).setRefreshPolicy(refresh);
+        }
+        return channel -> requestBuilder.execute(new RestBuilderListener<>(channel) {
+            @Override
+            public RestResponse buildResponse(PutRoleMappingResponse response, XContentBuilder builder) throws Exception {
+                return new RestResponse(RestStatus.OK, builder.startObject().field("role_mapping", response).endObject());
+            }
+        });
     }
 }
